--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -1,3 +1,22 @@
 + 编写 string 类
 
-+ 
++ 快速排序
+
++ 归并排序
+
++ 堆排序
+
++ 搜索二叉树的的增删改查
+
++ 先序遍历（递归、迭代）
+
++ 中序遍历（递归、迭代）
+
++ 后续遍历（递归、迭代）
+
++ 先序、中序建树
+
++ 中序、后序建树
+
++ AVL建树
+
