[added] added points of OS and C++

--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -1,6 +1,16 @@
 + 进程、线程、协程的区别和联系？
 
-+ 堆和栈的区别？
+## 堆和栈的区别？
+
+    + 管理方式不同：栈是由编译自动管理，堆是由程序员申请释放，容易产生内存泄漏
+    + 空间大小不同：一般在32位操作系统下，堆最大能到 4GB,栈是 MB 级别大小
+    + 是否会产生碎片：堆频繁使用new/delete会造成内存空间的不连续，从而造成大量的碎片，是程序效率降低
+    + 生长方向不同：栈是从高地址向低地址方向增长，堆是低地址向高地址方向增长
+    + 分配方式不同：堆都是动态分配的，但是栈既有静态分配，还有动态分配。静态分配是编译器完成，动态分配是由malloc函数完成，并且也是由编译器完成内存释放。
+    + 分配效率不同：栈是由机器系统提供的数据结构，计算机会在底层对栈提供支持：分配专门的寄存器存放栈的地址，压栈出栈的都有专门的指令执行；堆是由函数库提供，采用一定的算法去内存中寻找足够大小的空间。
+    + 存储结构不同：栈存储的数据是先进后出，堆存储的数据方式是树
+    
+    [C++内存分配方式详解](https://blog.csdn.net/u013007900/article/details/79338653)
 
 + 如何用代码判断大小端存储？
 
