--- a/C++基础知识点/方法调用的原理.md
+++ b/C++基础知识点/方法调用的原理.md
@@ -12,3 +12,9 @@
         + call 指令
         + leave 指令
         + ret 指令
+
+# 方法调用过程
+    1. 调用者函数把被调用函数需要的参数按照与被调函数形参顺序相反的顺序押入栈中，即：从右向左依次把被调用函数所需要的参数压栈；
+    2. 调用者函数使用 call 指令调用被调函数，并把 call 指令的下一条指令的地址当作返回地址压入栈中（压栈指令操作隐含在 call 指令中）；
+    3. 在被调函数中，被调函数会先保存调用者函数的栈底地址（push ebp），然后再保存调用者函数的栈定地址，即：当前被调函数的栈底地址(mov ebp，esp)；
+    4. 在被调函数中，从 ebp 的位置处开始存放被调函数中局部变量和临时变量，并且这些变量的地址按照定义时的顺序依次减小，即：这些变量的地址是按照栈的延伸方向排列的，先定义的变量先入栈，后定义的变量后入栈；
