--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -1,3 +1,18 @@
+# 在不使用额外空间的情况下，交换两个数，你有几种方法？
+1. 算术法：
+```
+x = x + y
+y = x - y
+x = x - y 
+```
+2. 异或
+```
+x = x ^ y
+y = x ^ y
+x = x ^ y
+s
+```
+
 # 编写 string 类
 
 # 链表反转
@@ -10,7 +25,7 @@
 
 # 搜索二叉搜索树的的增删改查
 
-+ 二叉搜索树的插入
+# 二叉搜索树的插入
 ```
 TreeNode* newNode(int val){
     TreeNode* node = new TreeNode;
@@ -34,7 +49,7 @@ TreeNode* insertIntoBST(TreeNode* root, int val) {
 }
 ```
 
-+ 二叉搜索树的删除
+# 二叉搜索树的删除
 ```
 //找比root大的最小值
 int FindMin(TreeNode* root) {
