--- a/C++基础知识点/函数指针.md
+++ b/C++基础知识点/函数指针.md
@@ -50,6 +50,11 @@ int main(){
 ### 回调函数的作用
     回调函数的特点是跳出正常的程序执行顺序，作用就是为了分离代码，降低程序的耦合性。（在面向对象的模型中）
 
+    1. 当发生某种事件时，系统或者其他函数会自动调用你定义的一段函数；
+    2. 回调函数就相当于一个中断处理函数，由系统在符合你设定的条件时自动调用。为此在调用之前需要完成三件事：声明，定义，设置触发条件，就是在函数中把回调函数名称转换成地址作为一个参数，以便于系统调用；
+    3. 回调函数就是一个通过函数指针调用的函数，如果把函数的指针（地址）作为参数传递给另一个函数，当这个指针被用作调用它所指向的函数时，我们就称这是回调函数；
+    4. 因为可以把调用者与被调用者分开，调用者不关心谁是被调用者，所以它需要知道的只是存在一个具有某种特定原型、某些限制条件（如返回值为int）的被调用函数。
+
 https://blog.csdn.net/zhengnianli/article/details/98477427
 
 
