--- a/C++基础知识点/函数指针.md
+++ b/C++基础知识点/函数指针.md
@@ -50,6 +50,8 @@ int main(){
 ### 回调函数的作用
     回调函数的特点是跳出正常的程序执行顺序，作用就是为了分离代码，降低程序的耦合性。（在面向对象的模型中）
 
+    举个例子：一个下载系统中有一个文件下载模块，一个下载文件当前进度显示模块，系统要是实时显示文件的下载进度，在面向对象的实现中，就是实现两个类，但是显示模块如何去驱动下载进度条，？显示模块不知道也不应该知道下载模块所知道的文件下载进度（面向对象设计的封装性，模块间需要解耦，模块内要内聚），文件下载进度是只有下载模块才知道的事，解决方案就是给下载模块传递一个函数指针作为回调函数的驱动显示木块的希纳是进度。
+
     1. 当发生某种事件时，系统或者其他函数会自动调用你定义的一段函数；
     2. 回调函数就相当于一个中断处理函数，由系统在符合你设定的条件时自动调用。为此在调用之前需要完成三件事：声明，定义，设置触发条件，就是在函数中把回调函数名称转换成地址作为一个参数，以便于系统调用；
     3. 回调函数就是一个通过函数指针调用的函数，如果把函数的指针（地址）作为参数传递给另一个函数，当这个指针被用作调用它所指向的函数时，我们就称这是回调函数；
