--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -1,4 +1,4 @@
-+ 进程、线程、协程的区别和联系？
+## 进程、线程、协程的区别和联系？
 
 ## 堆和栈的区别？
 
@@ -12,6 +12,9 @@
     
     [C++内存分配方式详解](https://blog.csdn.net/u013007900/article/details/79338653)
 
-+ 如何用代码判断大小端存储？
+## 介绍几种典型的锁？
 
-+ 一个进程能创建多少线程，和什么有关？
+
+## 如何用代码判断大小端存储？
+
+##俄 一个进程能创建多少线程，和什么有关？
