--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -1,3 +1,14 @@
+# 红黑树的概念：
+1. 它是二叉排序树：
+    + 若左子树不空，则左子树上所有节点的值均小于或等于它的根节点的值；
+    + 若右子树不空，则右子树上所有节点的值均大于或等于它的根节点的值；
+    + 左右子树也分别为二叉排序树；
+2. 它满足以下几点要求：
+    + 树中所有节点非红即黑；
+    + 根节点必为黑节点；
+    + 红节点的子节点必为黑（黑节点的子节点可为黑）；
+    + 从根到叶节点的任何任何路径上黑节点的点数相同；
+3. 查找时间一定控制在 O(logn)
 # 在不使用额外空间的情况下，交换两个数，你有几种方法？
 1. 算术法：
 ```
