[added] computer network

--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -17,12 +17,43 @@
 # TCP三次握手过程
 
 # 什么是TCP粘包/拆包，发生的原因？
++ 一个完整的业务可能会被TCP拆分多个包进行发送，也可能把多个小包封装成一个大的数据包发送，这个就是TCP的拆包和粘包问题；
++ 原因：
+    - 应用程序写入数据的字节大小大于套接字发送缓冲区的大小；
+    - 进行 MSS 大小的 TCP 分段。（MSS = TCP 报文段长度-TCP首部长度）；
+    - 以太网的 payload 大于 MTU 进行 IP 分片。（MTU：一种通信协议的某一层上面所能通过的最大数据包大小）；
++ 解决方案：
+    1. 消息定长；
+    2. 再包尾部增加回车或者空格符等特殊符号进行分割；
+    3. 将消息分为消息头和消息尾；
+    4. 使用其他复杂的协议，如 RTMP 协议等；
+
+---
 
 # 一个TCP连接可以对应几个HTTP请求？
++ 如果维持连接，一个 TCP 连接，可以发送多个 HTTP 请求的；
+
+---
 
 # 一个TCP连接中HTTP请求发送可以一起发送吗？
++ HTTP/1.1 存在一个问题，单个 TCP 连接再同一时刻只能处理一个请求，意思是说，两个请求的生命周期不能重叠，任意两个 HTTP 请求从开始到结束的时间在同一个 TCP 连接里不能重叠。
++ HTTP/1.1 中存在 Pipelinning 技术是可以完成多个请求同时发送，但浏览器是默认关闭的，所以默认一个 TCP 连接中多个请求一起发送的功能是不可用的。
++ HTTP2 中由于 multiplexing 特点存在，多个 HTTP 请求可以在同一个 TCP 连接中并行进行；
++ 在 HTTP/1.1 时代中，浏览器是如何提高记载效率的：
+    - 维持和服务器已经建立的 TCP 连接，在同一连接中处理多个请求；
+    - 和服务器建立多个 TCP 连接；
+
+---
 
 # 一个完整的HTTP请求包括哪些内容？
++ 域名解析；
++ 发起 TCP 的三次握手；
++ 建立 TCP 三次握手后发起 HTTP 请求；
++ 服务器响应 http 请求，浏览器得到 html 代码；
++ 浏览器解析 html 代码，并请求代码中的资源（js、css、图片等）
++ 浏览器对页面进行渲染呈现给客户；
+
+---
 
 # HTTP长连接和短连接的区别
 
@@ -55,6 +86,10 @@
 # SQL注入攻击？
 
 # DNS是什么？
++ 域名系统：因特网上作为域名和IP地址互相映射的一个分布式数据库；
++ 通过主机名最终得到该主机名对应的 IP 地址过程叫做域名解析；
+
+---
 
 # DNS工作原理？
 
