--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -132,16 +132,62 @@
 ---
 
 # 在浏览器中输入url地址后显示主页的过程？
++ 根据域名，进行 DNS 解析；
++ 拿到解析的 IP 地址，建立 TCP 连接；
++ 向 IP 地址发送 HTTP 请求；
++ 服务器处理请求，并返回响应结果；
++ 关闭 TCP 连接；
++ 浏览器解析 HTML，布局渲染；
+
+---
 
 # 浏览器地址栏输入一个url，回车后背后进行哪些技术步骤？
++ 解析url获取IP地址
+    1. 查看浏览器缓存；若没有
+    2. 查看本机 host 文件，调用 API，linux 下 调用 socket 函数 gethostbyname 查看本地的 host 文件；如还是没有：
+    3. 向 DNS 服务器发送 DNS 请求，查询本地 DNS 服务器，递归查询到对应的 IP 地址，使用的是 UDP 协议；
+    4. 有了服务器的 IP 地址和默认的端口号后（http 默认是 80，https 默认是 443）后，调用 socket 建立 TCP 连接；
+    5. 三次握手成功建立连接成功后，如果是 http 就可以开始传输数据了；
+    6. 如果不是 http 协议，服务器会返回一个头 5 开头的重定向消息，把端口号换成 443，然后四次挥手断开连接；
+    7. 三次握手建立连接后，再进行一次 SSL 加密技术来保证传输数据的安全性，保证数据在传输的过程中不被修改或者替换；
+    8. 沟通好双方使用的认证算法，加密算法和检验算法，在此过程中还要检验对方的 CA 安全证书；
+    9. 确认无误后开始通信，然后服务器会返回浏览器想要访问的网址的一些数据，在此过程中会将页面渲染，最终显示出我们看到的网页效果；
+
+---
 
 # cookie是什么？
++ HTTP 是无状态的，为了让 HTTP 协议尽可能的简单，使它可以处理大量事务，HTTP/1.1 引入 Cookie 来保存状态信息；
++ Cookie 是服务器发送到用户浏览器并保存在本地的一小块数据，它会在浏览器之后向同一服务器再次发送请求时被携带上，用于告知服务器两个请求是否来自同一浏览器。由于之后每次请求都会需要携带 Cookie 数据，因此会带来额外开销；
++ Cookie 曾一度用于客户端数据的存储，因为当时没有其他合适的存储方法而作为唯一的存储手段，新的浏览器 API 已经允许开发者直接将数据存储到本地，如使用 Web storage API（本地存储和会话存储）或者 IndexedDB；
++ cookie 是一种标识，用于标识浏览器的唯一性； session 可以理解为为一种数据结构，多数情况是一个键值对，存储在服务器上；
+
+---
 
 # cookie有什么用？
++ 会话状态管理（如用户登陆状态等需要记录的消息）
++ 个性化设置（如用户自定义设置、主题等）
++ 浏览器行为跟踪（如跟踪分析用户行为等）
+
+---
 
 # session知识总结？
++ 除了可以将用户信息通过cookie存储在用户浏览器中，也可以利用 Session 存储在服务端，存储在服务端的信息更安全；
++ Session 可以存储在服务器上的文件、数据库或者内存中，也可以将 Session 存储在 redis 这种内存型数据库中，效率会更高；
++ 使用 Session 维护用户登陆状态的过程如下：
+    1. 用户进行登陆时，用户提交包含用户名和密码的表单，放入到 HTTP 请求报文中；
+    2. 服务器验证该用户名和密码，如果正确则把用户信息存储到 redis 中，redis 中的 key 称为 Session ID；
+    3. 服务器返回的响应的报文的 Set-Cookie 首部字段包含了这个 Session ID，客户端收到响应报文之后将该 Cookie 值存入到浏览器中；
+    4. 客户端之后会对同一服务器进行请求时会包含该 Cookie 值，服务器收到之后提取出 Session ID，从 redis 中取出用户信息，继续之前的业务操作；
+
+**注意：** Session ID 的安全性问题，不能让它倍恶意攻击者轻易的获取，那么就不能产生一个容易被猜到的 Session ID 值，此外，还需要经常重新生成 Session ID。对安全性要求极高的场景下，例如转账扽操作，除了使用 session 管理用户状态之外，还需要对用户进行重新验证，比如重新输入密码，或者使用短信验证等方式；
+
+---
 
 # session工作原理？
++ 客户端登陆完成之后，服务器会创建对应的 session，session 创建完之后，会把 session 的 id 发送给客户端，客户端再存储到浏览器中；
++ 这样客户端每次访问服务器时，都会带着 session id ，服务器拿着 session id 之后再内存中找到相应的 session 就可以正常的工作了；
+
+---
 
 # cookie 和 session 的区别？
 
