--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -190,8 +190,23 @@
 ---
 
 # cookie 和 session 的区别？
++ Cookie 是客户端保持状态的方法；
+    - Cookie 简单的理解就是存储由服务器发送至客户端保存的一段字符串，为了保持会话，服务器可以在响应客户端请求时将 Cookie 字符串放到 Set-Cookie 下，客户机收到 Cookie 之后之后保存这段字符串，之后再请求时候带上这个 Cookie 就可以被识别。
+    - Cookie 在客户端上保存的形式只有两种，一种是会话 Cookie，一种是持久 Cookie，会话 Cookie 就是将服务器返回的 Cookie 字符串保存在内存中，关闭浏览器之后自动注销；持久 Cookie 则是存储在客户端磁盘上，其有效时间在服务器响应头中被指定，在有效期内，客户端再次请求服务器时都可以直接从本地取出。需要说明的是存放在磁盘上的 Cookie 是可以被多个浏览器代理所共享；
++ Session 是服务器保持状态的方法：
+    - session 是保存在服务器上，也可以保存在数据库、文件或内存中，每个用户由独立的 session 记录用户在客户端的操作
+    - 每个用户有一个独一无二的 session ID 作为 Session 文集的 hash 值，通过这个值可以锁定 session 结构的数据，这个 session 结构中存储了用户操作行为；
++ 当服务端需要识别客户端时就需要结合 Cookie。每次 HTTP 请求时，客户端都会发送响应的 Cookie 信息到服务端。实际上大多数应用都是用 Cookie 来实现 Session 跟踪的。第一次创建 Session 的时候，服务端会在 HTTP 协议中告诉客户端，需要在 Cookie 里面记录一个 Session ID，以后每次请求都会把这个会话 ID 发送到服务器，用于识别该 ID。
+
+---
 
 # SQL注入攻击？
++ 攻击者在 HTTP 请求中注入恶意的 SQL 代码，服务器使用参数构建数据库 SQL 命令时，恶意 SQL 会一起被构造，并在数据库中执行；
++ 防范 SQL 注入攻击：
+    - web 端：1）有效性检验；2）限制字符串输入长度；
+    - 服务端：1）不用拼接 SQL 字符串；2）使用预编译的 prepareStatement；3）有效性检验；4）过滤SQL需要的参数中的特殊字符，比如单引号，双引号；
+
+---
 
 # DNS是什么？
 + 域名系统：因特网上作为域名和IP地址互相映射的一个分布式数据库；
@@ -200,10 +215,29 @@
 ---
 
 # DNS工作原理？
++ 将主机域名转换成 IP 地址，属于应用层协议，使用 UDP 传输；
++ 过程：浏览器缓存，再查操作系统缓存，路由器缓存，IPS 服务器缓存，根域名服务器缓存，顶级域名服务器缓存，主域名服务器缓存;
+    - 主机向本地域名服务器的查询一般采用递归查询；
+    - 本地服务器向根域名服务器查询是迭代查询；
++ 步骤：
+    1. 当用户输入域名时，浏览器先检查自己缓存是否有这个域名映射的 ip 地址，有解析结束；
+    2. 然后检查操作系统缓冲中有没有解析过的结果；
+    3. 然后再请求本地域名服务器解析（LDNS）；
+    4. 若没有命中直接跳到根域名服务器请求解析，根域名服务会返回一个主域名服务器地址；
+    5. 此时 LDNS 再发送请求给上一步返回 gTLD（通用顶级域），接收请求的 gTLD 查找并返回对应的 Name Server 地址；
+    6. Name Server 根据映射关系表找到 IP 地址，返回给 LDNS；
+    7. LDNS 缓存这个域名和对应的 IP，把解析的结果返回给用户，用户根据 TTL 值缓存到本地缓存中，域名解析过程至此结束；
+
+---
 
 # 域名解析为什么要使用UDP协议？
++ 客户端向 DNS 服务器查询域名一般返回不超过 512 个字节，使用 UDP 传输就足够了；
++ UDP 比 TCP 速度快，一个请求一个应答即可；
+
+---
 
 # DNS解析过程？
++ 现在浏览器缓存中找该域名对应的 IP 地址；
 
 # DNS负载均衡？
 
