--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -14,19 +14,92 @@
 
 ---
 
-# TCP三次握手过程
+# TCP 三次握手过程？
+1. 客户端将标志位 SYN 置为 1，随机产生一个值 seq=j，并且将包发送给服务端。此时客户端进入 SYN_SENT 状态，等待服务端确认；
+2. 服务端收到数据包后由 SYN=1 知道是客户端请求建立，服务端将标志位 SYN 和 ACK 都置为 1，ack=j+1，并且随机产生一个值 seq=k，并将数据包发送给客户端以确认连接请求，服务端进入 SYN_RECV 状态；
+3. 客户端收到确认后，检查 ACk 是否为 1，ack 是否为 j+1，如果是则将标志位 ACK 置为 1，ack = k+1，并且将包发送给服务端，当服务端检查了 ack = k+1，且 ACK 为 1 后，则建立成功，客户端和服务端进入 ESTABLISED 状态，完成三次握手过程；
 
-# 什么是TCP粘包/拆包，发生的原因？
-+ 一个完整的业务可能会被TCP拆分多个包进行发送，也可能把多个小包封装成一个大的数据包发送，这个就是TCP的拆包和粘包问题；
-+ 原因：
-    - 应用程序写入数据的字节大小大于套接字发送缓冲区的大小；
-    - 进行 MSS 大小的 TCP 分段。（MSS = TCP 报文段长度-TCP首部长度）；
-    - 以太网的 payload 大于 MTU 进行 IP 分片。（MTU：一种通信协议的某一层上面所能通过的最大数据包大小）；
-+ 解决方案：
-    1. 消息定长；
-    2. 再包尾部增加回车或者空格符等特殊符号进行分割；
-    3. 将消息分为消息头和消息尾；
-    4. 使用其他复杂的协议，如 RTMP 协议等；
+---
+
+# TCP 四次挥手过程？
+1. 客户端数据发送完毕后会再发送一个 FIN = 1，seq = u的报文，给服务端，表示请求关闭连接，报文发出后客户端进入 FIN_WAIT_1 状态；
+2. 服务端收到来自客户端的 FIN 数据 包后，会回复一个 ACK 的确认关闭的应答包，应答包的 seq = v, ack = u+1；发送后服务端进入 CLOSE_WAIT 等待状态；
+3. 服务端数据发送完毕后也会发送一个 FIN = 1, seq = w, ack = u+1 的报文给客户端，数据包发送完毕后服务端进入 LAST_ACK 状态；
+4. 客户端收到服务端的 FIN 数据包后，会回复一个 seq = u+1, ack = w+1 的应答数据包，客户端进入 CLOSED 状态，然后服务端接收到该数据包后也进入到了 CLOSED；
+
+---
+
+# TCP 挥手次数为啥要比握手多一次？
++ 握手时正处于 LISTEN 状态的服务器收到客户端的 SYN 报文时，它可以把 ACK 和 SYN 放在同一个报文中来发送给客户端；
++ 挥手时当接收到对方的 FIN 报文时，仅仅是表示对方已经没有数据发送了。但是不代表己方的数据发送完毕；当己方数据发送完毕以后，再发送 FIN 报文给对方表示你数据已经发送完毕，请求关闭连接。
+
+---
+
+# 为什么一定进行三次握手？
++ 由于超时重传的机制，会让客户端重发久未应答的连接请求；
++ 如果是两次握手会导致久未到达服务端在重发的连接请求到达后又一次和服务端进行连接并且连接成功，但是客户端的数据已经从重发的连接请求中发送。
++ 这样就会导致服务端一致会有一个连接等待客户端发送数据，造成资源浪费；
+
+--
+
+# TCP 和 UDP 的区别？应用场景都有哪些？
++ TCP 面向连接；而 UDP 是面向非连接的，意思就是发送数据之前无需进行三次握手的过程；
++ TCP 提供无差错、不丢失、且按序到达的可靠服务；而 UDP 只是尽最大努力交付，不保证数据的可靠性；
++ UDP 既有较好的实时性，适用于高速传输和对实时性有较高的通信和广播通信；TCP 则通过校验和、出错重传、序号标识、滑动窗口、确认应答等控制可靠交付适用于对数据可靠性和完整性有要求的场景；
++ TCP 连接是点到点，而 UDP 支持一对一、一对多、多对一、多对多等；
++ TCP 对资源要求较多，而 UDP 相反；
++ TCP 面向的是字节流，而 UDP 面向的数据包；
+
++ 适用场景：
+    - UDP：DNS，SNMP；
+    - TCP：FTP，Telnet，SMTP等；
+
+---
+
+# UDP 一个包最大能多大？
++ 以太网数据帧在 46~1500 字节之间；1500 字节是链路层的 MTU（最大传输单元）
++ 1500 字节不包括链路层的首部和尾部的 18 个字节。也就是说 1500 字节是 IP 数据报长度限制；又因为 IP 数据报的首部是 20 个字节，所以 IP 数据报的数据区长度最大为 1480 字节；
++ 1480 自己是用来存放 TCP 报文段或者是 UDP 数据报的，又因为 UDP 数据包的首部是 8 字节，所以 UDP 数据包区最大长度是 1472 字节。
+
+---
+
+# TCP 粘包？
++ 描述：在 TCP 数据传输中，发送端为了将多个发往接收端的包更有效地方法，使用了优化方法，将多个间隔较少，数据量小的数据，合并成一个大的数据块，然后进行封装。这样在接收端就难以分辨，这样的情况被称为 TCP 粘包；
++ 接收端会把收到的分组保存到接收缓存区中，然后应用程序主动从缓存区中读取分组。如果 TCP 接收分组的速度大于应用程序都分组的速度，多个包就会被存到缓存，应用程序读数据时，就会读取到多个首位相连粘到一起的包了。
++ 解决方法
+    + 发送方：对于发送方造成的粘包现象，通过关闭 Nagle 算法解决，使用 TCP_NODELAY 选项；
+    + 应用程序：
+        1. 消息定长；
+        2. 再包尾部增加回车或者空格符等特殊符号进行分割；
+        3. 将消息分为消息头和消息尾；
+        4. 使用其他复杂的协议，如 RTMP 协议等；
+
+---
+
+# TCP 可靠性保证？
+1. 序列号：TCP 首部的序号字段用来保证数据能有序的提交给应用层，TCP 把数据堪称无结构的有序的字节流。数据流中的每个字节都编上一个序号字段的值指本报文所发送的数据的第一个字节序号；
+2. 确认号：TCP 受不得确认号是期望收到对方的下一个报文段的数据的第一个字节的序号；
+3. 重传：超时重传和冗余 ACK 重传；
+4. 流量控制：TCP 采用大小可变的滑动窗口进行流量控制，窗口大小单位是字节；
+5. 拥塞控制；
+6. 校验和；
+
+---
+
+# TCP 拥塞控制？
++ 慢开始：
++ 快重传和快恢复
+
+---
+
+# TCP 流量控制？
++ TCP 端对端进行数据传输时，会通过流量控制的思想来控制发送端单次发送的数据大小，流量控制是利用滑动窗口来实现的；
+
+---
+
+# 流量控制和拥塞控制的区别？
++ 拥塞控制就是为了防止过多的数据注入到网络中导致网络中的路由器或链路不会过载；拥塞控制是一个全局性的过程；
++ 流量控制是控制发送方发送速率，让接收方来得及接收。利用滑动窗口机制可以设置流量，具体是利用 TCP 报文段中窗口大小字段来控制，发送方的发送窗口不可以大于接收方发回来的窗口值；
 
 ---
 
@@ -237,10 +310,30 @@
 ---
 
 # DNS解析过程？
-+ 现在浏览器缓存中找该域名对应的 IP 地址；
++ 现在浏览器缓存中找该域名对应的 IP 地址；如果找不到回去找硬盘的 host 文件；
++ 如果还是没有的到对应的 IP 地址，浏览器就会向本地的 DNS 服务器发送一个 DNS 请求，本地服务器一般都是网络接入提供商服务，中国电信、中国移动等；
++ 查询请求到达本地 DNS 服务器后，本地 DNS 服务器首先会去查询它的缓存记录，如果有就直接返回结果，如果没有本地服务器还要向 DNS 根服务器进行查询；
++ 根服务器收到解析域名的请求后，会判断这个域名是由谁来授权管理的，并返回一个负责该顶级域名服务器的一个 IP。本地 DNS 服务器收到 IP 地址后，会继续向这个顶级域名服务器发送解析域名的请求，如果顶级域名服务器还是不能解析这个域名，它会找一个管理该域的下一级 DNS 服务器的 IP 地址返回给本地 DNS 服务器，本地服务器收到这个 IP 地址后，会重复上述步骤直到知道这个 IP 地址或者查找失败返回；
+
+---
 
 # DNS负载均衡？
++ 当一个网站有足够多的用户的时候，假如每次请求的资源都位于一台机器上面，那么这台机器随时可能崩掉，处理的办法就是使用 DNS 负载均衡技术；
++ 原理是在 DNS 服务器中为同一主机配置多个 IP 地址，在应答 DNS 查询时，DNS 服务器对每个查询将以 DNS 文件中主机记录的 IP 地址按顺序返回不同的解析结果，将客户端的访问引导到不同的机器上去，使得不同的客户端访问不同的服务器，从而达到负载均衡的目的。
+
+---
 
 # RARP是什么？工作原理？
++ 反向地址转换协议，网络层协议，RARP 与 ARP 协议的工作方式相反。RARP 使只知道自己的硬件地址的主机能够知道其 IP 地址。RARP 发出要反向解释的物理地址并希望返回其 IP 地址，应答包括能够提供所需信息的 RARP 服务器发出的 IP 地址；
++ 原理：
+    - 网络上的每台设备都有一个独一无二的硬件地址，通常是由设备厂商分配的 MAC 地址。主机从网卡上读取 MAC 地址，然后在网络上发送一个 RARP 请求的广播数据包，请求 RARP 服务器回复该主机的 IP 地址；
+    - RARP 服务器收到了 RARP 请求的数据包，为其分配 IP 地址，并将 RARP 回应发送给主机；
+    - 主机收到 RARP 回应后，就可以使用得到的 IP 地址进行通讯了；
+
+---
 
 # 端口有效范围？
++ 0~1023 为知名端接口，如 HTTP 的是 80，FTP 是 20（数据端口），21（控制端口）；
++ UDP 和 TCP 报头使用两个字节存放端口号，所以端口号的有效范围为 0~65535，动态端口的范围从 1024~65535；
+
+---
