--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -23,7 +23,7 @@
 
 # TCP 四次挥手过程？
 1. 客户端数据发送完毕后会再发送一个 FIN = 1，seq = u的报文，给服务端，表示请求关闭连接，报文发出后客户端进入 FIN_WAIT_1 状态；
-2. 服务端收到来自客户端的 FIN 数据 包后，会回复一个 ACK 的确认关闭的应答包，应答包的 seq = v, ack = u+1；发送后服务端进入 CLOSE_WAIT 等待状态；
+2. 服务端收到来自客户端的 FIN 数据 包后，会回复一个 ACK 的确认关闭的应答包，应答包的 seq = v, ack = u+1；发送后服务端进入 CLOSE_WAIT 等待状态，客户端接收到服务端发送确认报文后进入 FIN_WAIT_2 状态；
 3. 服务端数据发送完毕后也会发送一个 FIN = 1, seq = w, ack = u+1 的报文给客户端，数据包发送完毕后服务端进入 LAST_ACK 状态；
 4. 客户端收到服务端的 FIN 数据包后，会回复一个 seq = u+1, ack = w+1 的应答数据包，客户端进入 CLOSED 状态，然后服务端接收到该数据包后也进入到了 CLOSED；
 
@@ -36,11 +36,11 @@
 ---
 
 # 为什么一定进行三次握手？
-+ 由于超时重传的机制，会让客户端重发久未应答的连接请求；
-+ 如果是两次握手会导致久未到达服务端在重发的连接请求到达后又一次和服务端进行连接并且连接成功，但是客户端的数据已经从重发的连接请求中发送。
++ 由于超时重传的机制，会让客户端重发久未应答的连接请求报文；
++ 如果是两次握手会有可能使久未到达服务端的请求报文在客户端重发连接请求报文建立连接后又一次和服务端进行连接并且连接成功，但是客户端的数据已经从先建立的连接中传输了。
 + 这样就会导致服务端一致会有一个连接等待客户端发送数据，造成资源浪费；
 
---
+---
 
 # TCP 和 UDP 的区别？应用场景都有哪些？
 + TCP 面向连接；而 UDP 是面向非连接的，意思就是发送数据之前无需进行三次握手的过程；
@@ -64,7 +64,7 @@
 ---
 
 # TCP 粘包？
-+ 描述：在 TCP 数据传输中，发送端为了将多个发往接收端的包更有效地方法，使用了优化方法，将多个间隔较少，数据量小的数据，合并成一个大的数据块，然后进行封装。这样在接收端就难以分辨，这样的情况被称为 TCP 粘包；
++ 描述：在 TCP 数据传输中，发送端为了将多个发往接收端的包更有效地发送，使用了优化方法，将多个间隔较少，数据量小的数据，合并成一个大的数据块，然后进行封装。这样在接收端就难以分辨，这样的情况被称为 TCP 粘包；
 + 接收端会把收到的分组保存到接收缓存区中，然后应用程序主动从缓存区中读取分组。如果 TCP 接收分组的速度大于应用程序都分组的速度，多个包就会被存到缓存，应用程序读数据时，就会读取到多个首位相连粘到一起的包了。
 + 解决方法
     + 发送方：对于发送方造成的粘包现象，通过关闭 Nagle 算法解决，使用 TCP_NODELAY 选项；
@@ -93,12 +93,12 @@
 ---
 
 # TCP 流量控制？
-+ TCP 端对端进行数据传输时，会通过流量控制的思想来控制发送端单次发送的数据大小，流量控制是利用滑动窗口来实现的；
++ TCP 端对端进行数据传输时，会通过控制发送端单次发送的数据大小来控制数据传输的速度防止对端来不及处理的情况，流量控制是利用滑动窗口来实现的；
 
 ---
 
 # 流量控制和拥塞控制的区别？
-+ 拥塞控制就是为了防止过多的数据注入到网络中导致网络中的路由器或链路不会过载；拥塞控制是一个全局性的过程；
++ 拥塞控制就是为了防止过多的数据注入到网络中导致网络中的路由器或链路过载的措施；拥塞控制是一个全局性的过程；
 + 流量控制是控制发送方发送速率，让接收方来得及接收。利用滑动窗口机制可以设置流量，具体是利用 TCP 报文段中窗口大小字段来控制，发送方的发送窗口不可以大于接收方发回来的窗口值；
 
 ---
