--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -22,26 +22,13 @@ x = x - y
 2. 异或
 ```
 x = x ^ y
-y = x ^ y
+y = x ^ yubuntu
+
 x = x ^ y
 ```
 
 # 编写 string 类
-```
-class String
-{
-    public:
-        String(const char*str=NULL);    //构造函数
-        String(const String &str);      //拷贝构造函数
-        ~String();                      //析构函数
-        String operator+(const String& str) const;  //重载+
-        String& operator=(const String &str);        //重载=
-        String& operator=(const String &str);        //重载+=
-        bool operator==(const String &str) const;    //重载==
 
-
-}
-```
 # 链表反转
 
 # 快速排序
