[added] added some points

--- a/知识点汇总（面试版）.md
+++ b/知识点汇总（面试版）.md
@@ -8,6 +8,8 @@
 7. 结构体内存对齐问题？
 8. const 用法？
 9. static 用法？
+10. 指针和引用的区别？
+11. extern "C" 的用法？
 ---
 
 # C 和 C++ 区别？
@@ -21,7 +23,7 @@
 1. 预处理阶段：处理以 # 号开头的预处理命令，生成 .i 或者 .ii 文件；
 2. 编译阶段：对预编译阶段生成的文件进行词法分析、语法分析、语义分析和优化之后，生成汇编文件；
 3. 汇编阶段：把汇编代码翻译生成机器码文件，生成 .obj 或者 .o 文件；
-4. 链接阶段：对生成的 .obj 文件和 .o 文件和相关的文件关联起来，申城可执行程序；
+4. 链接阶段：将生成的 .obj 文件和 .o 文件和相关的文件关联起来，生成可执行程序；
 
 ---
 
@@ -81,7 +83,7 @@
 
 # const 用法？
 1. const 修饰变量、数组、指针、函数参数、函数返回值、引用都是将修饰对象声明为只读属性，不允许修改 const 所修饰的对象；
-2. const 修饰类成员函数、类的作用都是限制在成员函数中堆类成员变量的修改；
+2. const 修饰类成员函数、类的作用都是限制在成员函数中对类成员变量的修改；
 
 + 常量指针：const 修饰 常量的指针：int const *p/const int *p, *p 值不可变；
 + 指针常量：const 修饰 的指针指向常量：int *const p, p 值不可改变；
@@ -95,6 +97,24 @@
 + 考虑类时：
     1. 修饰成员变量：该变量只与类关联，不与类的对象关联，该类的所有对象共用该变量；
     2. 修饰成员函数：该函数没有 this 指针，无法访问类中的非 static 成员和变量；不能被声明为 const、虚函数、volatile；可以被非 static 成员函数任意访问；
+
+---
+
+# 指针和引用的区别？
+1. 是否需要分配内存：指针是一个实体，需要分配内存；引用是一个变量别名，无需分配内存；
+2. 是否需要初始化：引用在定义的时候必须进行初始化，并且不能改变；指针在定义的时候不一定需要进行初始化，并且指向的空间可变；
+3. 是否能有多级：有多级指针，但是引用只能是一级；
+4. 自增结果不同：指针自增是指向下一个空间，引用自增是引用的变量值加一；
+5. sizeof 结果不同：sizeof 指针得到的指针本身大小；sizeof 引用结果是引用对象的大小；
+6. 安全性不同：使用指针需要做类型检查，防止野指针出现；引用不需要；
+7. 实现不同：引用的底层是指针实现的；
+8. 参数传递的实质不同：指针传递时实际上传递的值，即指针指向的地址；传引用实际上传递的是地址，传递的是变量的地址；
+
+---
+
+# extern "C" 的用法？
+
+
 
 ---
 
