[added] computer network

--- a/计算机网络/计算机网络（面试版）.md
+++ b/计算机网络/计算机网络（面试版）.md
@@ -19,3 +19,14 @@
 18. HTTPS 是如何保证数据传输安全的，整体流程是什么？
 19. 浏览器地址栏中输入一个 url 后，背后有哪些技术？
 20. DNS 概念和工作原理？
+
+---
+
+# 为什么一定要进行三次握手？
++ 为了防止久未到达服务端的连接请求在客户端又一次重发连接请求并且成功建立连接后再次到达服务端；
++ 如果时两次握手，此时服务端和客户端的连接成功的建立连接，但是客户端已经有一个连接在进行数据传输，这样就造成了服务端资源浪费；
++ 三次握手会在服务端同意连接请求后再经历一次客户端的确认，可以避免上述情况；
+
+---
+
+# TCP 粘包问题原因是什么？如何解决？
