[modified] added points

--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -12,6 +12,13 @@
 
 ---
 
+# hashtable 中解决冲突的方法？
++ 线性探测法：使用 hash 函数计算出的位置如果已经被占用了，则向后依次寻找，找到表尾则回表头，直到寻找到一个空位；
++ 开链法：每个表格维护一个 list， 如果hash 函数计算出的格子相同，就按顺序方法放到 list 中；
++ 再散列：发生冲突时使用另一种 hash 函数再计算一个地址出来，直至不冲突为止；
++ 二次探测：发生冲突后按照 步长的平方数距离依次寻找空位；
++ 公共溢出区：发生冲突后把数据放到该区中；
+
 # 在不使用额外空间的情况下，交换两个数，你有几种方法？
 1. 算术法：
 ```
