--- a/知识点汇总（面试版）.md
+++ b/知识点汇总（面试版）.md
@@ -1,4 +1,5 @@
-# C++ 基础知识面试版
+# C++ 知识面试版
+## 基础知识
 1. C 和 C++ 区别？
 2. C++ 中从代码到可执行文件中间经历的过程？
 3. main 函数执行前和执行后的代码是什么？
@@ -10,6 +11,61 @@
 9. static 用法？
 10. 指针和引用的区别？
 11. extern "C" 的用法？
+12. define 和 typedef 、const、inline、函数的区别？
+13. 变量声明和定义的区别？
+14. 什么是内存泄漏，如果检查和避免？
+15. 函数调用压栈过程？
+16. 函数指针和回调函数？
+17. 数组和指针的区别？
+18. #define、#ifndef、#ifdef、#endif？
+19. 介绍面对对象的三大特性？
+20. 动态编译和静态编译？
+21. 深拷贝和浅拷贝的区别？
+
+## 关键字
+1. malloc 和 free 底层实现过程？
+2. new/delete 和 malloc/free 的区别？
+3. final 和 override 关键字？
+4. auto、decltype 和 decltype(auto) 的用法？
+5. C++ 四种强制转换 reinterpret_cast/const_cast/static_cast/dynamic_cast 用法？
+6. volatile、mutable 关键字的作用？
+
+## 重载、虚函数
+1. C++ 中重载、重写（覆盖）、和隐藏的区别？
+2. 什么是虚函数？虚函数和纯虚函数的区别？
+3. 哪些函数不能定义为虚函数？
+4. 虚函数实现？
+5. 基类的虚函数表存储在内存中的什么位置？虚表指针初始化后放在哪里？
+6. 静态类型和动态类型，动态绑定和静态绑定；
+7. 函数中有重载时，函数的匹配原则和顺序是什么？
+8. 什么是隐式转换，如何消除隐式转换？
+
+
+## 类
++ 空类的大小？
++ 类的对象存储空间大小如何计算的？
++ 类对象大小受到哪些因素影响？
++ 编译器会为空类默认添加什么函数？
++ 什么是成员列表初始化？什么时候必须用到初始化成员列表？初始化成员调用过程？
++ C++ 有哪几种构造函数？
++ 类构造函数的执行顺序是什么？
++ 什么时候调用拷贝构造函数？
++ 什么是移动构造函数？
++ 类成员的初始化方式有几种，它们有什么区别？
++ 拷贝初始化和直接初始化的区别是什么？
++ 类什么时候会析构？
++ 析构函数的作用，以及是什么时候其作用的？
++ 为什么析构函数一般写成虚函数？
++ 为什么构造函数不能是虚函数？
++ 构造函数和析构函数可以调用虚函数吗？
++ 构造函数和析构函数的执行顺序是什么？他们内部都做了什么？
++ 父类的析构函数是否要设置为纯虚函数？
++ 析构函数和构造函数可否抛出异常？
++ C++ 多态是如何实现的？
++ 构造函数、析构函数、虚函数能否声明为内联函数？
++ 如何阻止一个类被实例化？
++ 如何禁止程序自动生成拷贝构造函数？
+
 ---
 
 # C 和 C++ 区别？
@@ -46,10 +102,11 @@
     1. 栈段：包括局部变量和函数调用的上下文；
     2. 文件映射段：包括动态库、共享内存等；
     3. 堆段：包括动态分配的的内存，从低地址开始向上增长；
-    4. 未初始化数据段：包括未初始化的全局变量和静态变量；
-    5. 已初始化数据段：包括已初始化的全局变量和静态变量；
-    6. 程序文件段：包括二进制可执行代码；
+    4. 全局/静态存储区（.bss和.data）：包括未初始化和已初始化的全局变量和静态变量；
+    5. 常量存储区(.rodata)：存放常量；
+    6. 程序文件段（.text）：包括二进制可执行代码；
 
+**补充：** 在 C 中会将未初始化的数据放在 .bss 数据段中，已初始化的数据放到 .data 中， C++ 中就不做区分了；
 ---
 
 # C++ 的 struct 和 C 的 struct 的区别？
@@ -113,10 +170,82 @@
 ---
 
 # extern "C" 的用法？
-
-
++ 作用是为了实现 C/C++ 混编；
++ C++ 编译器为了实现重载功能，编译器在编译阶段会对函数重命名，以原有函数名和各个参数的数据类型构成一个新的函数，而 C 的编译器没有这步额外的步骤，这样就会导致 C 和 C++ 代码进行混编的时候，出现编译器在程序连接阶段找不到对应的 C 函数，造成链接失败。
++ extern "C" 会提示编译器被修饰的代码按照 C 语言方式进行编译，这样就避免了 C++ 编译器找不到 C 函数导致链接失败的错误了；
 
 ---
+
+# define 和 typedef 、const、inline、函数的区别？
++ define：
+    1. 用于定义及书写复杂的内容，是个关键字；
+    2. 发生在预处理阶段，属于文本插入替换；
+    3. 宏不是语句，句尾不需要加分号；
+    4. define 只做替换，不做类型检查和计算，也不求解，容易出现错误，一般加上一个大括号包含住所有内容；
+    5. 本身不会分配内存，替换时会在内存中产生多份相同的备份；
++ typedef：
+    1. 用于定义类型别名，属于编译的一部分；
+    2. 会进行类型检查，且在句尾加分号标识语句结束；
+    3. typedef char *p_char 和 define p_char char* 差别很大；
++ const:
+    1. 作用域编译时期和运行时期；
+    2. const 常量有数据类型，编译器会对其做类型检查；
+    3. 在程序运行时只有一份备份，且可以执行常量折叠，能将复杂的表达式计算出结果放到常量表中；
++ inline：
+    1. 是函数。在编译期进行替换
+    2. 类型检查，更安全；
++ 函数：
+    1. 在运行时需要跳转到具体调用函数中；
+    2. 有返回值，且具有类型，会进行类型检查；
+
+---
+
+# 变量声明和定义的区别？
+1. 声明仅仅是告诉编译器变量的位置，并不分配空间；定义是要在定义的地方为其分配存储空间；
+2. 相同变量可以在多处声明，但是只能在一处定义；
+
+---
+
+# 什么是内存泄漏，如果检查和避免？
+
+---
+
+# 函数调用压栈过程？
++ 编译器会将当前程序的运行状态，调用函数的返回地址，调用函数的参数从右向左，调用函数中定义变量依次压栈；
+
+---
+
+# 函数指针和回调函数？
++ 函数指针是指向函数的特殊指针，是有一个返回值类型，一个指针再加一个参数列表构成，这个指针就是函数指针；
++ 函数指针就是指向一个函数的地址，通过函数指针可以访问到该函数，此时通过函数指针访问到的函数就叫做回调函数；
++ 回调函数的主要作用是为了分离代码，降低程序的耦合性；
+
+---
+
+# 数组和指针的区别？
+1. 概念：数组是用于存储多个相同类型数据的集合；指针是一个变量，存储的一个地址值；
+2. 赋值不同：同类型指针可以相互赋值，数组只能逐个的拷贝和赋值；
+3. 存储方式不同:数组在内存中是连续存放的；指针在内存中就是一个 4 或 8 字节大小的变量；
+4. sizeof 结果不同：sizeof 数组名得到的整个数组所占空间大小，sizeof(数组名)/sizeof(数据类型)得到的数组大小；sizeof 指针大小在 32bit 系统下是 4，64bit 下是 8；
+
+---
+
+# #define、#ifndef、#ifdef、#endif？
+1. 实现条件编译的需求；
+2. 避免了头文件的重复定义；
+
+---
+
+# 虚函数实现？
+1. 虚函数是依靠虚指针 vptr 和虚函数表 vtable 来实现；
+2. vptr 在类的构造函数中创建生成，并且只能使用 this 指针来访问，因为它 this 指针就是类的一个成员，并且虚函数指针指向的地址就是虚函数表；
+3. 虚函数的调用顺序是： this->vptr->vtable->virtual function;
+
+
+
+
+
+
 
 
 
