--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -76,13 +76,15 @@
 
 ---
 
-# TCP 可靠性保证？
-1. 序列号：TCP 首部的序号字段用来保证数据能有序的提交给应用层，TCP 把数据堪称无结构的有序的字节流。数据流中的每个字节都编上一个序号字段的值指本报文所发送的数据的第一个字节序号；
-2. 确认号：TCP 受不得确认号是期望收到对方的下一个报文段的数据的第一个字节的序号；
-3. 重传：超时重传和冗余 ACK 重传；
-4. 流量控制：TCP 采用大小可变的滑动窗口进行流量控制，窗口大小单位是字节；
-5. 拥塞控制；
-6. 校验和；
+# TCP 可靠性保证？（待完善）
+1. 校验和；
+2. 确认应答和序列号；
+3. 超时重传；
+4. 连接管理；
+5. 流量控制；
+6. 拥塞控制；
+
+[TCP 可靠性保证](https://www.jianshu.com/p/42dbcd39c3e7)
 
 ---
 
@@ -98,8 +100,8 @@
 ---
 
 # 流量控制和拥塞控制的区别？
-+ 拥塞控制就是为了防止过多的数据注入到网络中导致网络中的路由器或链路过载的措施；拥塞控制是一个全局性的过程；
-+ 流量控制是控制发送方发送速率，让接收方来得及接收。利用滑动窗口机制可以设置流量，具体是利用 TCP 报文段中窗口大小字段来控制，发送方的发送窗口不可以大于接收方发回来的窗口值；
++ 拥塞控制是TCP双方为了防止过多的数据注入到网络中导致网络或连接过载而采取的措施；拥塞控制是一个全局性的过程；
++ 流量控制是控制发送方发送速率，让接收方来得及接收。利用的是滑动窗口机制来设置流量，具体做法是使用 TCP 报文段中窗口大小字段来控制，发送方的发送窗口不可以大于接收方发回来的窗口值；
 
 ---
 
@@ -172,7 +174,7 @@
 ---
 
 # GET和POST的区别？
-+ get 是获取数据，post 是获取数据；
++ get 是获取数据，post 是修改数据；
 + get 是把请求的数据放到 url 上，以 ？ 分割 URL 和传输数据，参数是以 & 相连，所以 get 是不太安全，而 post 是把数据放到 HTTP 的包内部（request body）
 + get 提交的数据最大是 2k（取决于浏览器），post 理论上没有限制；
 + get  产生一个 TCP 包，浏览器会把 http header 和 data 一并发送出去，服务器响应 200（返回数据）， POST 产生两个 TCP 数据包，浏览先发送 header，服务器响应 100 continue，浏览器再发送  data，服务器响应 200 ok（返回数据）；
@@ -219,12 +221,12 @@
     1. 查看浏览器缓存；若没有
     2. 查看本机 host 文件，调用 API，linux 下 调用 socket 函数 gethostbyname 查看本地的 host 文件；如还是没有：
     3. 向 DNS 服务器发送 DNS 请求，查询本地 DNS 服务器，递归查询到对应的 IP 地址，使用的是 UDP 协议；
-    4. 有了服务器的 IP 地址和默认的端口号后（http 默认是 80，https 默认是 443）后，调用 socket 建立 TCP 连接；
-    5. 三次握手成功建立连接成功后，如果是 http 就可以开始传输数据了；
-    6. 如果不是 http 协议，服务器会返回一个头 5 开头的重定向消息，把端口号换成 443，然后四次挥手断开连接；
-    7. 三次握手建立连接后，再进行一次 SSL 加密技术来保证传输数据的安全性，保证数据在传输的过程中不被修改或者替换；
-    8. 沟通好双方使用的认证算法，加密算法和检验算法，在此过程中还要检验对方的 CA 安全证书；
-    9. 确认无误后开始通信，然后服务器会返回浏览器想要访问的网址的一些数据，在此过程中会将页面渲染，最终显示出我们看到的网页效果；
++ 有了服务器的 IP 地址和默认的端口号后（http 默认是 80，https 默认是 443）后，调用 socket 建立 TCP 连接；
++ 三次握手成功建立连接成功后，如果是 http 就可以开始传输数据了；
++ 如果不是 http 协议，服务器会返回一个头 5 开头的重定向消息，把端口号换成 443，然后四次挥手断开连接；
++ 三次握手建立连接后，再进行一次 SSL 加密技术来保证传输数据的安全性，保证数据在传输的过程中不被修改或者替换；
++ 沟通好双方使用的认证算法，加密算法和检验算法，在此过程中还要检验对方的 CA 安全证书；
++ 确认无误后开始通信，然后服务器会返回浏览器想要访问的网址的一些数据，在此过程中会将页面渲染，最终显示出我们看到的网页效果；
 
 ---
 
@@ -289,7 +291,7 @@
 
 # DNS工作原理？
 + 将主机域名转换成 IP 地址，属于应用层协议，使用 UDP 传输；
-+ 过程：浏览器缓存，再查操作系统缓存，路由器缓存，IPS 服务器缓存，根域名服务器缓存，顶级域名服务器缓存，主域名服务器缓存;
++ 过程：浏览器缓存，再查操作系统缓存，路由器缓存，本地服务器缓存，根域名服务器缓存，顶级域名服务器缓存，主域名服务器缓存;
     - 主机向本地域名服务器的查询一般采用递归查询；
     - 本地服务器向根域名服务器查询是迭代查询；
 + 步骤：
@@ -337,3 +339,7 @@
 + UDP 和 TCP 报头使用两个字节存放端口号，所以端口号的有效范围为 0~65535，动态端口的范围从 1024~65535；
 
 ---
+
+
+# 并行计算重点：
++ 对于并行编程来讲，最根本的还是思考如何将大量的计算按需分解成多个独立、能同时运行的部分，找出真正需要共享的数据，实现为原子类型
