--- a/计算机网络/计算机网络（面试版）.md
+++ b/计算机网络/计算机网络（面试版）.md
@@ -20,6 +20,68 @@
 19. 浏览器地址栏中输入一个 url 后，背后有哪些技术？
 20. DNS 概念和工作原理？
 21. Cookie 和 Session ？
+22. select、poll、epoll？
+
+---
+
+# IOS 七层模型是什么？各自的功能？
+1. 物理层：底层数据传输，如网线、网卡标准；单位比特流
+2. 数据链路层：定义数据的基本格式，如网卡MAC地址，单位帧；
+3. 网络层：定义IP编址，路由功能；如不同设备的数据转发；单位包；
+4. 传输层：端到端传输数据的基本功能，如TCP、UDP；单位段；
+5. 会话层：控制应用程序之间会话能力，如不同软件数据分发给不同软件；
+6. 标识层：数据格式标识，基本压缩解密功能；
+7. 应用层：各种应用软件，包括web应用；
+
+---
+
+# TCP 三次握手？
+1. 客户端将标志位 SYN 置为 1，随机产生一个值 seq=j，并且将包发送给服务端。此时客户端进入 SYN_SENT 状态，等待服务端确认；
+2. 服务端收到数据包后由 SYN=1 知道是客户端请求建立，服务端将标志位 SYN 和 ACK 都置为 1，ack=j+1，并且随机产生一个值 seq=k，并将数据包发送给客户端以确认连接请求，服务端进入 SYN_RECV 状态；
+3. 客户端收到确认后，检查 ACk 是否为 1，ack 是否为 j+1，如果是则将标志位 ACK 置为 1，ack = k+1，并且将包发送给服务端，当服务端检查了 ack = k+1，且 ACK 为 1 后，则建立成功，客户端和服务端进入 ESTABLISED 状态，完成三次握手过程；
+
+
+---
+
+# TCP 四次挥手？
+1. 客户端数据发送完毕后会再发送一个 FIN = 1，seq = u的报文，给服务端，表示请求关闭连接，报文发出后客户端进入 FIN_WAIT_1 状态；
+2. 服务端收到来自客户端的 FIN 数据 包后，会回复一个 ACK 的确认关闭的应答包，应答包的 seq = v, ack = u+1；发送后服务端进入 CLOSE_WAIT 等待状态，客户端接收到服务端发送确认报文后进入 FIN_WAIT_2 状态；
+3. 服务端数据发送完毕后也会发送一个 FIN = 1, seq = w, ack = u+1 的报文给客户端，数据包发送完毕后服务端进入 LAST_ACK 状态；
+4. 客户端收到服务端的 FIN 数据包后，会回复一个 seq = u+1, ack = w+1 的应答数据包，客户端进入 CLOSED 状态，然后服务端接收到该数据包后也进入到了 CLOSED；
+
+---
+
+# TCP 挥手次数为什么会比握手多一次？
++ 握手时正处于 LISTEN 状态的服务器收到客户端的 SYN 报文时，它可以把 ACK 和 SYN 放在同一个报文中来发送给客户端；
++ 挥手时当接收到对方的 FIN 报文时，仅仅是表示对方已经没有数据发送了。但是不代表己方的数据发送完毕；当己方数据发送完毕以后，再发送 FIN 报文给对方表示你数据已经发送完毕，请求关闭连接。
+
+---
+
+# 为什么一定要进行三次握手？
++ 由于超时重传的机制，会让客户端重发久未应答的连接请求报文；
++ 如果是两次握手会有可能使久未到达服务端的请求报文在客户端重发连接请求报文建立连接后又一次和服务端进行连接并且连接成功，但是客户端的数据已经从先建立的连接中传输了。
++ 这样就会导致服务端一致会有一个连接等待客户端发送数据，造成资源浪费；
+
+---
+
+# TCP 和 UDP 的区别？各自的应用场景？
++ TCP 面向连接；而 UDP 是面向非连接的，意思就是发送数据之前无需进行三次握手的过程；
++ TCP 提供无差错、不丢失、且按序到达的可靠服务；而 UDP 只是尽最大努力交付，不保证数据的可靠性；
++ UDP 既有较好的实时性，适用于高速传输和对实时性有较高的通信和广播通信；TCP 则通过校验和、出错重传、序号标识、滑动窗口、确认应答等控制可靠交付适用于对数据可靠性和完整性有要求的场景；
++ TCP 连接是点到点，而 UDP 支持一对一、一对多、多对一、多对多等；
++ TCP 对资源要求较多，而 UDP 相反；
++ TCP 面向的是字节流，而 UDP 面向的数据包；
+
++ 适用场景：
+    - UDP：DNS，SNMP；
+    - TCP：FTP，Telnet，SMTP等；
+
+---
+
+# UDP 的一个包最大能有多少字节？
+1. 链路层的最大传输单元是 1500 字节；
+2. IP 数据包的首部是 20 字节，所以  IP 数据报的数据区长度最大是 1480 字节；
+3. UDP 首部 8 字节，所以 UDP 数据包区最大的长度是 1472 字节；
 
 ---
 
@@ -120,7 +182,7 @@
 **补充：** 这里的幂等性指的是一个和多次请求某一个资源应该具有同样的副作用，简单了来说意味着对同一 URL 的多个请求应该同样的结果；
 
 ---
-18. HTTPS 是如何保证数据传输安全的，整体流程是什么？
+# HTTPS 是如何保证数据传输安全的，整体流程是什么？
 + 客户端向服务器发送 SSL 请求；
 + 服务器把公钥发送给客户端，并且服务端保存着唯一的私钥；
 + 客户端用公钥对双方通信的对称密钥进行加密，并发送给服务器端；
@@ -130,7 +192,7 @@
 
 ---
 
-19. 浏览器地址栏中输入一个 url 后，背后有哪些技术？
+# 浏览器地址栏中输入一个 url 后，背后有哪些技术？
 + 解析url获取IP地址
     1. 查看浏览器缓存；若没有
     2. 查看本机 host 文件，调用 API，linux 下 调用 socket 函数 gethostbyname 查看本地的 host 文件；如还是没有：
@@ -144,7 +206,7 @@
 
 ---
 
-20. DNS 概念和工作原理？
+# DNS 概念和工作原理？
 + 将主机域名转换成 IP 地址，属于应用层协议，使用 UDP 传输；
 + 过程：浏览器缓存，再查操作系统缓存，路由器缓存，本地服务器缓存，根域名服务器缓存，顶级域名服务器缓存，主域名服务器缓存;
     - 主机向本地域名服务器的查询一般采用递归查询；
@@ -152,9 +214,25 @@
 
 ---
 
-21. Cookie 和 Session ？
+# Cookie 和 Session ？
 + cookie 本质是一段字符串，是客户端保持状态的方法，客户端使用cookie来向服务端标识自己的唯一性；
 + session 本质是一个键值对，是服务端借助客户端传来的 cookie 值来识别请求的客户端唯一性的；
 
 ---
 
+# select、poll、epollc ?
+1. linux 中，提供了 select、poll、epoll 三个函数来实现网络 IO 复用：IO 复用就是就是进程预先告诉内核要监视的IO条件，使得内核一旦发现进程指定的一个或多个 IO 条件就绪，就通知用户进程去处理，从而不会阻塞在单个 IO 上；
+2. select 缺点：
+    1. 单个进程能够监视的文件描述符数量存在最大限制；
+    2. 每次调用都需要将监视的文件描述符数组从用户空间拷贝到内核空间中去，会产生大量的开销；
+    3. 监视的文件描述符有就绪后 select 返回的是整个文件描述符集，应用程序需要遍历整个数组才能找到哪个文件描述符发生了事件；
+    4. select 的触发事件是水平触发，如果应用程序没有完成对一个已经就绪的文件描述符操作，那么每次调用 select 还会将这些文件买描述符通知给进程；
+3. poll：
+    + poll 解决了 select 能够监视的文件描述符数量的有限问题，其他缺点还依然存在；
+4. epoll：
+    1. epoll 使用的是一个文件描述符管理多个文件描述符，将用户关系的文件描述符事件存放到内核事件表中，这样用户空间和内核空间的数据拷贝只需要一次；
+    2. epoll 是事件触发，无需轮询查询事件发生；
+    3. 没有最大的连接限制，内存拷贝；
+    4. 利用共享内存加速与内核的消息传递；
+
+---
