--- a/知识点汇总（面试版）.md
+++ b/知识点汇总（面试版）.md
@@ -207,7 +207,12 @@
 ---
 
 # 什么是内存泄漏，如果检查和避免？
-
++ 指的是由于疏忽或者错误造成了程序未能释放掉不在使用的内存的情况；内存泄漏并不说内存在物理上的消失，而是应用程序分配某段内存后，由于设计错误失去了对该段内存的控制，因而造成了内存的浪费；
++ 内存泄漏分类：
+    1. 堆内存泄漏：程序运行中根据需要通过通过动态分配内存函数从堆中分配一块内存，在使用完成后没有没有释放掉，导致了该块内存在程序运行期间无法继续使用，此时就产生了堆内存泄漏；
+    2. 系统资源泄漏：程序使用系统分配的资源，如SOCKET、Bitmap、handle 等没有相应的释放掉，造成了系统资源的浪费，严重可导致系统性能下降，运行不稳定；
+    3. 没有将基类的析构函数定义为虚函数。当基类指针指向子类对象时，当基类的析构函数不是虚函数时，那么子类的析构函数不会被调用，子类资源没有正确释放，此时就造成了内存泄漏了。
+    
 ---
 
 # 函数调用压栈过程？
