[modified] modified computer network error

--- a/计算机网络/计算机网络（面试版）.md
+++ b/计算机网络/计算机网络（面试版）.md
@@ -109,7 +109,7 @@
 ---
 
 # TCP 的流量控制是什么？
-+ 拥塞控制是TCP双方为了防止过多的数据注入到网络中导致网络或连接过载而采取的措施，其基本方法是当有理由任务网络即将进入拥塞状态时减缓TCP传输；
++ 拥塞控制是TCP双方为了防止过多的数据注入到网络中导致网络或连接过载而采取的措施，其基本方法是当有理由认为网络即将进入拥塞状态时减缓TCP传输；
 + 慢开始：
     1. 连接建立好后初始化拥塞窗口（cwnd）为1，表示可以传递一个 最大报文段（MSS）大小的数据；
     2. 每收到一个 ACK，cwnd 值加 1，呈线程上升；
@@ -145,7 +145,7 @@
 # HTTP 的请求方法？
 1. GET：请求指定的页面信息，并返回实体主体；
 2. HEAD：类似于 GET 请求，只不过返回响应中没有具体内容，用于获取报头；
-3. POST：向指定资源提交数据进行处理请求。数据倍包含在请求体中，POST 请求可能会导致新的资源的建立或已有的资源的修改；
+3. POST：向指定资源提交数据进行处理请求。数据被包含在请求体中，POST 请求可能会导致新的资源的建立或已有的资源的修改；
 4. PUT：从客户端向服务器传送的数据取代指定的文档的内容；
 5. DELETE：请求服务器删除指定的页面；
 6. CONNECT：HTTP/1.1 协议中预留给能够将连接改为管道方式的代理服务器；
