--- a/知识点汇总（面试版）.md
+++ b/知识点汇总（面试版）.md
@@ -241,6 +241,16 @@
 
 ---
 
+# 介绍面对对象的三大特性？
++ 把对象的服务和属性结合成一个独立的单元，并尽可能的隐藏内部的实现细节；
++ 继承：特殊类拥有一般的属性和服务，通过继承可以利用已有的数据结构去构造新的数据结构；
++ 多态：指的是同一操作作用于不同对象产生的不同响应；简单的概括为：一个接口多种实现；
+
+---
+
+# 动态编译和静态编译？
+# 深拷贝和浅拷贝的区别？
+
 # 虚函数实现？
 1. 虚函数是依靠虚指针 vptr 和虚函数表 vtable 来实现；
 2. vptr 在类的构造函数中创建生成，并且只能使用 this 指针来访问，因为它 this 指针就是类的一个成员，并且虚函数指针指向的地址就是虚函数表；
