[modified] added some points

--- a/知识点汇总（面试版）.md
+++ b/知识点汇总（面试版）.md
@@ -249,7 +249,14 @@
 ---
 
 # 动态编译和静态编译？
++ 静态编译：编译器在编译可执行文件时，把需要用到的对应的动态链接库的部分提取出来，连接到可执行到可执行文件中，使得可执行文件在运行时不需要依赖动态连接库；
++ 动态编译：动态编译的可执行文件需要附带一个动态连接库，在执行时需要调用对应动态连接库的命令。优点是一方面缩小了可执行文件的体积，另一方面加快了编译速度，节省了系统资源。缺点一是无论程序大小，都需要附带一个相对庞大的连接库，二是移植性差，如果其他计算机没有对应的运行库，那么动态编译的可执行文件就无法运行；
+
+---
+
 # 深拷贝和浅拷贝的区别？
++ 浅拷贝只是拷贝一个指针的值，并没有开辟一个新地址，拷贝的指针和原来的指针指向同一块地址，如果原来的指针所指向的资源释放了，那么再释放浅拷贝的指针的资源就会出现错误；
++ 深拷贝不仅是拷贝值，还会开辟一块新的空间去存放新的值，即使原先的对象被释放掉，释放内存也不会影响深拷贝的值。
 
 # 虚函数实现？
 1. 虚函数是依靠虚指针 vptr 和虚函数表 vtable 来实现；
