[added] interview of C++

--- a/知识点汇总（面试版）.md
+++ b/知识点汇总（面试版）.md
@@ -40,6 +40,7 @@
 7. 函数中有重载时，函数的匹配原则和顺序是什么？
 8. 什么是隐式转换，如何消除隐式转换？
 
+---
 
 ## 类
 + 空类的大小？
@@ -258,10 +259,198 @@
 + 浅拷贝只是拷贝一个指针的值，并没有开辟一个新地址，拷贝的指针和原来的指针指向同一块地址，如果原来的指针所指向的资源释放了，那么再释放浅拷贝的指针的资源就会出现错误；
 + 深拷贝不仅是拷贝值，还会开辟一块新的空间去存放新的值，即使原先的对象被释放掉，释放内存也不会影响深拷贝的值。
 
+---
+
+## 关键字
+# malloc 和 free 底层实现过程？
++ malloc 是从堆中申请内存。操作系统中有一个记录空闲内存地址的链表，操作系统收到程序的申请时，会遍历该链表，然后找到第一个空间大于所申请空间的堆节点，然后把该节点从链表中删除，并把该节点的空间分配给程序；
++ free 过程与 malloc 过程正好相反，可以直接将要删除的空间重新插入到记录空间内存地址的链表值中即可。
+---
+
+# new/delete 和 malloc/free 的区别？
++ 类型不同：new/delete 是关键字，需要编译器支持；malloc/free 是库函数，需要头文件支持；
++ 参数不同：new 申请内存分配时无需指定内存块大小，编译器会根据类型信息自行计算。而 malloc 则需要显示地指出所需内存的大小；
++ 返回结果不同：new 内存申请成功后返回时对象类型的指针；malloc 返回的是 void*，需要通过强制类型转换将 void* 转换成需要的类型；
++ 内存分配失败返回结果不同：new 内存返回失败会抛出异常，malloc 内存分配失败返回 NULL；
++ 申请用户自定义类过程不同：new 会调用 operator new 函数，申请足够的内存，然后调用该类型的构造函数，进行初始化成员变量，最后返回自定义类型指针，delete 会先调用析构函数，然后再调用 operator delete 函数释放内存。malloc/free 只能实现动态的申请和释放内存，无法强制要求对其做自定义类型对象构造和析构函数。
+
+---
+
+# final 和 override 关键字？
++ override 指定了子类的这个虚函数是重写父类的，如果该函数父类没有或者没有被声明为虚函数，是要被报错的。
++ final 阻止某个类被继承或者某个虚函数被重写；
+
+---
+
+# auto、decltype 和 decltype(auto) 的用法？
++ auto： C++ 新标准引入 auto 说明符，用它就能让编译器替我们去分析表达式所属类型。auto 让编译器通过初始值进行类型推演，从而获得定义变量的类型，auto 必须要有初始值
++ decltype：选择并返回操作数的数据类型，在此过程中，编译器只是分析表达式并得到它的类型，并不去计算实际的表达式的值。
++ decltype(auto):C++14 新增的类型指示符，可以用来生命变量以及指示函数返回类型。在使用时会将"="号左边的表达式替换调 auto，再根据 decltype 的语法规则来确定类型；
+
+---
+
+# C++ 四种强制转换 reinterpret_cast/const_cast/static_cast/dynamic_cast 用法？
++ reinterpret_cast：用于类型之间进行强制转换；
++ const_cast：用来修改类型的 const 和 volatile 属性；
++ static_cast：派生类指针或引用转换成基类；
++ dynamic_cast：基类向派生类转换比较安全，反之不安全，但是转换失败会返回 nullptr，以此来做判断
+
+---
+
+# volatile、mutable 关键字的作用？
++ volatile：提醒编译器它后面所定义的变量随时都有可能改变，因此编译后的程序每次需要存储或读取这个变量的时候，都会直接从变量地址中读取数据。
++ mutable：为了突破 const 限制设置的。可以用来修饰一个类的成员变量。被 mutable 修饰的变量，将永远处于可变的状态。即使 const 函数也可以改变这个变量的值；
+---
+
+
+## 重载、虚函数
+
+# C++ 中重载、重写（覆盖）、和隐藏的区别？
++ 重载（overload）：在同一范围定义中，存在参数类型、数量和顺序不同，但是函数名相同的两个或者以上函数；他们的关系称之为重载；
++ 重写（override）：派生类中的函数覆盖基类的同名函数，要求基类函数和必须是虚函数，且必须与基类的虚函数有相同的参数个数，参数类型和返回值类型；
++ 隐藏（hide）：派生类的函数会隐藏其父类同名函数（只需要函数名相同）；
+
+---
+
+# 什么是虚函数？虚函数和纯虚函数的区别？
++ 虚函数是 C++ 用于实现多态的机制定义的函数，实现通过基类指针访问派生类的需求；
++ 虚函数和纯虚函数的区别：
+    - 纯虚函数没有具体函数体，并且是用 “=0” 来表示
+    - 含有纯虚函数的类不能实例化，并且继承的子类也必须实现继承的纯虚函数后才能实例化
+    - 纯虚函数在虚函数表中的值为 0 
+
+---
+
+# 哪些函数不能定义为虚函数？
+1. 友元函数，它不是类的成员函数；
+2. 全局函数；
+3. 静态成员函数（没有this指针）；
+4. 构造函数、拷贝构造函数；
+
+---
+
 # 虚函数实现？
 1. 虚函数是依靠虚指针 vptr 和虚函数表 vtable 来实现；
 2. vptr 在类的构造函数中创建生成，并且只能使用 this 指针来访问，因为它 this 指针就是类的一个成员，并且虚函数指针指向的地址就是虚函数表；
 3. 虚函数的调用顺序是： this->vptr->vtable->virtual function;
+
+---
+
+# 基类的虚函数表存储在内存中的什么位置？虚表指针初始化后放在哪里？
++ 基类的虚函数表存储在内存的只读数据段，也就是内存模型中常量区；
++ vptr 虚表指针是在类在进行实例化时，构造函数的执行时进行初始化，存在对象的前四个字节；
+
+---
+
+# 静态类型和动态类型，动态绑定和静态绑定；
++ 静态类型：对象在声明时采用的类型，在编译期既已确定；
++ 动态类型：通常是指一个指针或引用目前所指对象的类型，是在运行期才决定的；
++ 静态绑定：绑定的是静态类型，所对应的函数或属性依赖于静态类型，发生在编译期；
++ 动态绑定：绑定的动态类型，所对应的函数或属性依赖于对象的动态类型，发生在运行期；
+
+**总结：**非虚函数一般都是静态绑定，而虚函数都是动态绑定；
+
+---
+
+# 函数中有重载时，函数的匹配原则和顺序是什么？
+1. 名字查找；
+2. 确定候选函数
+3. 寻找最佳匹配
+
+---
+
+# 什么是隐式转换，如何消除隐式转换？
+1. 隐式转化意思是不需要用户干预，编译器私下进行的类型转换行为。
+2. 基础数据类型的隐式转换发生在小精度到大精度的转换中；比如 char=>int,int->long；自定义对象中子类对象可以隐式转换为父类对象；
+3. C++ 提供了explicit 关键字，在构造函数声明的时候加上可以禁止隐式转换；
+4. 如果构造函数只接受一个参数，则它实际上定义了转换为此类类型的隐式转换机制。可以通过将构造函数声明为 explicit 加以制止专类转换，explicit 关键字只对一个参数的构造函数有效，需要多个实参的构造函数不能用于执行隐式转换，所以无需为这些构造函数指定 explicit
+
+---
+
+## 类
+# 空类的大小？
++ C++ 空类大小不为0，不同编译器设置不一样，vs设置为 1；
++ C++ 标准指出，不允许一个对象（包括类对象）的大小为 0，不同的对象不能具有相同的地址；
++ 带有虚函数的类大小不为 1，因为会有一个 vptr 指向虚函数表，具体大小根据指针大小确定；
++ C++ 中要求对于类的每个实例都要有唯一的地址，那么编译器自动为空类分配一个字节大小，这样就可以保证每个实例都有一个独一无二的内存地址；
+
+---
+
+# 类的对象存储空间大小如何计算的？
++ 非静态成员的数据类型大小之和；
++ 编译器加入的额外成员变量（如指向虚函数表的指针）
++ 为了边缘对齐优化加入的 padding。
++ 空类（无静态数据成员）的对象 size 为 1，当作为基类时，size 为 0；
+
+---
+
+# 类对象大小受到哪些因素影响？
+1. 类的非静态成员变量大小，静态成员不占据类的空间，成员函数也不占据类的空间大小；
+2. 内存对齐另外分配的空间大小，类中的数据也是需要进行内存对齐操作的；
+3. 虚函数的话，会在类对象插入 vptr 指针，加上指针大小；
+4. 当该类是某类的派生类，那么派生类继承的基类部分数据成员也会存在在派生类中的空间中，对派生类的类对象大小进行扩展；
+
+---
+
+# 编译器会为空类默认添加什么函数？
++ 默认构造函数；
++ 默认拷贝构造函数；
++ 默认析构函数；
++ 重载赋值运算符函数；
+
+---
+
+# 什么是成员列表初始化？
++ 在类的构造函数中，不在函数体内对成员变量进行赋值，而是在构造函数的花括号前面使用冒号和初始化列表赋值；
++ 必须使用的场景：
+    - 初始化一个引用成员变量时；
+    - 初始化一个 const 成员变量时；
+    - 调用一个基类的构造函数，而基类构造函数拥有一组参数时；
+    - 当调用一个成员类的构造函数，而它的构造函数有一组参数时；
++ 调用过程：编译器会一一操作初始化列表，以适当的声明顺序在构造函数之内安插初始化操作，并且在任何显示用户代码前。成员列表的初始化顺序是按照类中成员声明顺序决定的，不是初始化列表中排列顺序决定的；
+
+---
+
+# C++ 有哪几种构造函数？
++ 默认构造函数
++ 初始化构造函数
++ 拷贝构造函数
++ 移动复制构造函数
++ 委托构造函数
++ 转换构造函数
+
+---
+
+# 类构造函数和析构函数的执行顺序是什么？
++ 构造函数顺序
+    1. 基类构造函数。如果有多个基类，则构造函数调用顺序是某个类在类派生表中的顺序，而不是它们在成员初始化表中的顺序。
+    2. 成员类对象构造函数，如果有多个成员类对象则构造函数的调用顺序是对象在类中被声明的顺序，而不是它们出现在成员初始化表中的顺序。
+    3. 派生类的构造
++ 析构函数顺序
+    1. 调用派生类的析构函数；
+    2. 调用成员类对象的析构函数；
+    3. 调用基类的析构函数；
+
+---
+
+# 什么时候调用拷贝构造函数？
++ 什么是移动构造函数？
++ 类成员的初始化方式有几种，它们有什么区别？
++ 拷贝初始化和直接初始化的区别是什么？
++ 类什么时候会析构？
++ 析构函数的作用，以及是什么时候其作用的？
++ 为什么析构函数一般写成虚函数？
++ 为什么构造函数不能是虚函数？
++ 构造函数和析构函数可以调用虚函数吗？
++ 构造函数和析构函数的执行顺序是什么？他们内部都做了什么？
++ 父类的析构函数是否要设置为纯虚函数？
++ 析构函数和构造函数可否抛出异常？
++ C++ 多态是如何实现的？
++ 构造函数、析构函数、虚函数能否声明为内联函数？
++ 如何阻止一个类被实例化？
++ 如何禁止程序自动生成拷贝构造函数？
+
+---
 
 
 
