[added] C++ interview points

--- a/知识点汇总（面试版）.md
+++ b/知识点汇总（面试版）.md
@@ -49,7 +49,6 @@
 + 编译器会为空类默认添加什么函数？
 + 什么是成员列表初始化？什么时候必须用到初始化成员列表？初始化成员调用过程？
 + C++ 有哪几种构造函数？
-+ 类构造函数的执行顺序是什么？
 + 什么时候调用拷贝构造函数？
 + 什么是移动构造函数？
 + 类成员的初始化方式有几种，它们有什么区别？
@@ -65,6 +64,14 @@
 + C++ 多态是如何实现的？
 + 构造函数、析构函数、虚函数能否声明为内联函数？
 + 如何阻止一个类被实例化？
++ 如何禁止程序自动生成拷贝构造函数？
++ 关于 this 指针？
++ 什么情况会自动生成默认构造函数？
++ 什么时候合成构造函数？
++ 什么时候需要合成拷贝构造函数？
++ 什么是虚继承？
++ 成员初始化列表在什么时候用到，它的调用过程是什么？
++ 一个类中全部构造函数的扩展过程？
 + 如何禁止程序自动生成拷贝构造函数？
 
 ---
@@ -421,7 +428,73 @@
 
 ---
 
-# 类构造函数和析构函数的执行顺序是什么？
+# 什么时候调用拷贝构造函数？
++ 用一个类的实例化区初始化另外一个对象的时候；
++ 函数的参数时类的对象时（非引用传递）
++ 函数的返回值是函数体内局部对象的类的对象时，此时虽然返回了 NVR（Named return Value）优化，但是由于返回方式是值传递，所以会在返回值的地方发生拷贝构造函数--- linux g++ 中不会发生；
+
+---
+
+# 什么是移动构造函数？
++ 使用一个对象初始化另一个对象后，如果该对象不再使用后，重复使用该对象的地址空间，避免新的空间重复分配，降低构造的构造成本，这是移动构造函数的设计初衷；
+
+---
+
+# 类成员的初始化方式有几种，它们有什么区别？
++ 赋值初始化：通过在函数体内进行赋值初始化；初始化列表：在冒号后使用初始化列表进行初始化；
++ 两者区别在于：函数体内进行初始化是在所有的数据成员被分配内存后才进行的，列表初始化是给数据成员分配内存空间时就进行初始化，也就是说分配一个数据成员，只要冒号后面有此数据成员的赋值表达式（此表达式必须是括号赋值表达式），那么分配了内存空间后在进入函数体之前给数据成员赋值，也就是说初始化这个数据成员时函数体还未执行。
+
+---
+
+# 拷贝初始化和直接初始化的区别是什么？
++ 当用于类类型对象时，初始化的拷贝形式和直接形式有所不同：
+    - 直接初始化直接调用与实参匹配的构造函数，拷贝拷贝初始化总是调用拷贝构造函数。
+    - 拷贝初始化首先使用制定构造函数创建一个临时对象，然后用拷贝构造函数将那个临时对象拷贝到正在创建的对象。
++ 为了提高效率，允许编译器跳过创建临时对象这一步，直接调用构造函数构造要创建的对象，这样就完全等价于直接初始化了，但是要区别两种情况：
+    - 当拷贝构造函数为 private 时，拷贝初始化会出错；
+    - 使用 explicit 修饰构造函数时，如果构造函数存在隐式转换，编译时会报错；
+
+---
+
+# 类什么时候会析构？
++ 对象声明周期结束，被销毁时；
++ delete 指向对象的指针时，或者 delete 指向对象的基类类型指针，而其基类析构函数是虚函数时；
++ 类包含类时，外部类析沟函数被调用时，内部类的析构函数也会被调用；
+
+---
+
+# 析构函数的作用，以及是什么时候其作用的？
++ 作用：用于撤销对象的一些特殊任务的处理，可以是释放对象分配的内存。
++ 作用时间：
+    1. 销毁对象时将调用析构函数；
+    2. 显性的调用析构函数；
+    3. 对象的作用域最后调用；
+
+---
+
+# 为什么析构函数一般写成虚函数？
++ 为了避免内存泄漏，当基类指针指向派生类对象时，如果删除该基类指针，就会调用指针指向的派生类析构函数，而派生类的析构函数又会去自动调用基类的析构函数，这样整个派生类的对象就完全被释放了；
++ 如果析构函数不声明为虚函数，则编译器实施静态绑定，这样整个派生类的对象完全被释放。在删除基类指针时，只会调用基类的析构函数而不调用派生类的析构函数，这样就会造成派生类对象析构不完全，造成内存泄漏。
++ 在实现多态时，当用基类操作派生类时，在析构时防止只析构基类而不析构派生类的状况发生，所以要将基类的析构函数声明为虚函数。
+
+---
+
+# 为什么构造函数不能是虚函数？
++ 创一个对象时，需要确定对象的类型，而虚函数的是在运行时动态确认其类型的。在构造一个对象时，由于一个对象还没有创建成功，编译器无法知道对象的实际类型；
++ 虚函数的调用需要虚函数表指针 vptr，而该指针存放在对象的内存空间中，若构造函数声明为虚函数，那么由于对象还未创建，没有内存空间，更没有虚函数表 vtable 地址来调用虚构造函数；
++ 虚函数的作用在于通过父类的指针或者引用它的时候能够变成调用子类的成员函数，而构造函数是在创建对象时自动调用，不可能通过父类或者引用去调用，因此规定构造函数不能是虚函数。
+
+---
+
+# 构造函数和析构函数可以调用虚函数吗？
++ 在 C++ 中，提倡不在构造函数和析构函数中调用虚函数；
++ 构造函数和析构函数调用虚函数时都不使用动态联编，如果在构造函数或析构函数中调用虚函数，则运行的是为构造函数或析构函数自身定义类型定义的版本；
++ 因为父类对象会在子类之前进行构造，此时子类部分的数据还未初始化，此时调用子类的虚函数是不安全的，故而 C++ 不会进行动态联编；
++ 析构函数是用来销毁一个对象的，在销毁一个对象时，先调用子类的析构函数，在调用子类的析构函数，所以在调用基类的析构函数时，派生类对象数据成员已经被销毁了，这个时候再调用子类的虚函数已经没有意义了
+
+---
+
+# 构造函数和析构函数的执行顺序是什么？他们内部都做了什么？
 + 构造函数顺序
     1. 基类构造函数。如果有多个基类，则构造函数调用顺序是某个类在类派生表中的顺序，而不是它们在成员初始化表中的顺序。
     2. 成员类对象构造函数，如果有多个成员类对象则构造函数的调用顺序是对象在类中被声明的顺序，而不是它们出现在成员初始化表中的顺序。
@@ -433,24 +506,141 @@
 
 ---
 
-# 什么时候调用拷贝构造函数？
-+ 什么是移动构造函数？
-+ 类成员的初始化方式有几种，它们有什么区别？
-+ 拷贝初始化和直接初始化的区别是什么？
-+ 类什么时候会析构？
-+ 析构函数的作用，以及是什么时候其作用的？
-+ 为什么析构函数一般写成虚函数？
-+ 为什么构造函数不能是虚函数？
-+ 构造函数和析构函数可以调用虚函数吗？
-+ 构造函数和析构函数的执行顺序是什么？他们内部都做了什么？
-+ 父类的析构函数是否要设置为纯虚函数？
-+ 析构函数和构造函数可否抛出异常？
-+ C++ 多态是如何实现的？
-+ 构造函数、析构函数、虚函数能否声明为内联函数？
-+ 如何阻止一个类被实例化？
-+ 如何禁止程序自动生成拷贝构造函数？
+# 父类的析构函数是否要设置为纯虚函数？
++ 可以设置，但是不建议。纯虚析构函数一定得定义，因此每个派生类的析构函数会被编译器加以扩张，以静态调用的方式调用其每一个虚基类以及上一层的析构函数，因此缺乏任何一个基类析构函数的定义，都会导致链接失败，所以最好不要把析构函数定义为纯虚析构函数。
 
 ---
+
+# 析构函数和构造函数可否抛出异常？
++ 构造函数可以抛出异常，但是必须保证抛出异常之前把系统资源释放掉，保证内存不被泄漏；
++ 析构函数的执行不应该抛出异常，因为异常从析构函数抛出，并且没有在本地捕捉，这就意味着析构函数执行不全，有内存泄漏风险；
+
+---
+
+# C++ 多态是如何实现的？
+1. 编译器在发生基类中有虚函数时，会自动为每个含有虚函数的类生成一个虚表，该表时一个一维数组，虚表中保存了虚函数的入口地址；
+2. 编译器会在每个对象的前四个字节保存一个虚表指针，即 vptr,指向对象所属类的虚表。在构造时根据对象的类型区初始化虚指针 vptr，从而让 vptr 指向正确的虚表，从而在调用虚函数时，能找到正确的函数；
+3. 所谓的合适时机就是在派生类定义对象时，程序会自动调用构造函数，在构造函数中创建虚表并对虚表初始化。在构造子类对象时，会先调用父类的构造函数，此时编译器只能找到父类，并为父类对象初始化虚表指针，令它指向父类的虚表，当调用子类的构造函数时，为子类对象初始化虚表指针，令它指向子类的虚表；
+4. 当派生类没有对基类的虚函数重写时，派生类的虚表指针指向的是基类的虚表；当派生类对基类的虚函数重写时，派生类的虚表指针指向的是自身的虚表；当派生类中有自己的虚函数时，在自己的虚表中将此虚函数地址添加到后面；
+5. 这样指向派生类的基类指针在运行时，就可以根据派生类对虚函数重写的情况进行动态的调用，从而实现多态性。
+
+---
+
+# 构造函数、析构函数、虚函数能否声明为内联函数？
++ 语法上没有错误，inline只是对编译器的一个建议；
++ 构造函数和析构函数声明为内联函数没有意义，原因有二：
+    1. 类中的函数默认都是内联的，声明与否本身就非必要；
+    2. 编译器在构造函数和析构函数中会添加额外的步骤，如申请/释放内存，构造/析构函数,导致构造函数和析构函数代码不符合内联函数的要求；
++ 虚函数是否内联看具体情况：如果是动态运行的代码肯定就不会去展开了，但是静态运行的代码并且代码量不大的或，是可以被展开的。
+
+---
+
+# 如何阻止一个类被实例化？
+1. 把类定义为抽象类
+2. 将构造函数声明为 private；
+
+---
+
+#  如何禁止程序自动生成拷贝构造函数？
++ 为了阻止编译器默认生成拷贝构造函数和拷贝复制函数，我们需要手动去重写这两个函数，某些情况下，为了避免调用拷贝构造函数和拷贝赋值函数，我们需要把他们设置为 private，防止被调用；
++ 类的成员函数和友元函数还是可以调用 private 函数，如果这个 private 只声明不定义，则会产生一个链接错误；
++ 针对上述两种情况，我们可以定义一个 base 类，在 base 类中将拷贝构造函数和拷贝赋值函数设置成 private，那么派生类中编译器就不会自动生成这两个函数，且由于 base 类中该函数是私有的，因此派生类将阻止编译器执行相关的操作；
+
+---
+
+# 关于 this 指针？
++ 概念：
+    + this 指针是类的指针，指向对象的首地址；
+    + this 指针只能在成员函数中使用，在全局函数、静态成员函数中无法使用；
+    + this 指针只有在成员函数中定义才有意义，且存储位置因编译器不同而不同；
++ 作用：
+    + 指向当前所在对象，通过它可以访问到当前对象的所有成员；
++ 使用： this 是一个常指针，使用方式等同于常指针；
++ 特点：
+    + this 只能在成员函数中使用，全局函数、静态函数都不能使用 this。实际上成员函数默认第一个参数为 T* const this;
+    + this 在成员函数开始前构造，在成员函数结束后清楚，生命周期等同于函数的参数。当调用一个类的成员函数时，编译器将类的指针作为函数 this 参数传递进去；
+    + 编译器会对 this 作优化，因此 this 指针传递效率较高；
+
+- this 指针何时创建的？
+    - this 指针在成员函数开始执行前构造，在成员函数执行结束后清除；    
+- this 指针存放在哪里？堆、栈、全局变量、还是其他？
+    - this 存放位置会因为编译器的不同而不同，栈、寄存器、全局变量都有可能。在汇编级别里，一个值只会以三种形式存在，立即数，寄存器值，内存变量值。不是放在寄存器中就是放在内存中。
+- this 指针是如何传递类中的函数的？绑定还是函数参数的首参数就是 this 指针？那么 this 指针是如何找到“类实例后函数的”？
+    - 大多编译器是通过 ecx（计数寄存器）传递this指针；
+    - 在调用之前，编译器会把对应的对象地址放到 eax 中，this 是通过函数参数的首参来传递的。
+- this 指针是如何访问类中的变量的？
+    - this 指针实际上就是对象的首地址，通过偏移量来访问类中的变量的；
+- 只有获得一个对象后，才能通过对象使用 this 指针。如果我们知道一个对象 this 指针的位置，可以直接使用吗？
+    - this 指针只有在成员函数中有定义，获得一个对象无法知道该对象的this指针的位置，所以就算知道this指针的位置，也没法使用。
+- 每个类编译后，是否创建一个类中函数表保存函数指针，以便用来调试函数？
+    - 不会，只有虚函数才会创建函数表。通过 this 指针，用来指向不同的对象，从而确保不同对象之间调用相同的函数可以互不干扰；
+
+---
+
+# 什么情况会自动生成默认构造函数？
+1. 带有默认构造函数的类成员函数时；
+2. 带有默认构造函数的基类时；
+3. 带有一个虚函数的类时；
+4. 带有一个虚基类的类时；
+
++ 合成的默认构造函数中，只有基类子对象和成员类对象会被初始化
+
+---
+
+# 什么时候合成构造函数？
+1. 如果一个类没有任何构造函数，但他含有一个默认构造函数的成员对象；
+2. 没有任何构造函数的类派生自一个带有默认构造函数的基类时；
+3. 含有虚函数的类时；
+4. 含有一个虚基类时；
+
++ 并不是任何没有构造函数的类都会合成一个构造函数；
++ 编译器合成出来的构造函数并不会显示的设定类中的每一个成员变量；
+
+---
+
+#  一个类中全部构造函数的扩展过程？
+1. 记录在成员初始化列表中的数据成员初始化操作会被放在构造函数的函数体内，并与成员的声明顺序为顺序；
+2. 如果一个成员并没有出现在成员初始化列表中，但它有一个默认构造函数，那么这个默认构造函数必须被调用；
+3. 如果类中有虚表，那么它必须被设定初值；
+4. 所有上一层的基类构造函数必须被调用；
+5. 所有虚基类的构造函数必须被调用；
+
+---
+
+# 如何禁止程序自动生成拷贝构造函数？
++ 为了阻止编译器默认生成拷贝构造函数和拷贝复制函数，我们需要手动去重写这两个函数，某些情况下，为了避免调用拷贝构造函数和拷贝赋值函数，我们需要把他们设置为 private，防止被调用；
++ 类的成员函数和友元函数还是可以调用 private 函数，如果这个 private 只声明不定义，则会产生一个链接错误；
++ 针对上述两种情况，我们可以定义一个 base 类，在 base 类中将拷贝构造函数和拷贝赋值函数设置成 private，那么派生类中编译器就不会自动生成这两个函数，且由于 base 类中该函数是私有的，因此派生类将阻止编译器执行相关的操作；
+
+---
+
+
+# 什么时候需要合成拷贝构造函数？
+1. 以一个对象作为另一个对象的初始时，比如当一个对象用等号做显示的初始化操作时，当对象被当作参数交给某个变量时，当函数传回一个类对象时；
+2. 如果一个类没有拷贝构造函数，但是有一个含有拷贝构造函数的类类型成员变量时；
+3. 当一个类没有拷贝构造函数，但是该类继承含有拷贝构造函数的基类时；
+4. 当一个类没有拷贝构造函数，但是该类声明或继承了虚函数时；
+5. 当一个类没有拷贝构造函数，但是该类含有虚基类时；
+
+---
+
+# 什么是虚继承？
++ 为了解决多继承时命名冲突和冗余数据问题，产生了虚继承，使得派生类中只保留一份间接基类的成员；
++ 在继承方式前面加上 virtual 关键字就是虚继承；
++ 虚继承的目的就是为了让某个类做出声明，承诺愿意共享它的基类，其中这个被共享的基类就是虚基类。
+
+---
+
+# 成员初始化列表在什么时候用到，它的调用过程是什么？
+1. 当初始化一个引用成员变量时；
+2. 初始化一个 const 成员时；
+3. 当调用一个基类的构造函数，而构造函数拥有一组参数时；
+4. 当调用一个成员类的构造函数，而它拥有一组参数时；
+
++ 调用过程：编译器会一一操作初始化列表，以适当的顺序在构造函数之内安插初始化操作，并且在任何显示用户代码前，列表中项目顺序是由类中的成员声明顺序决定的，而不是初始化列表中的排列顺序决定的；
+
+---
+
 
 
 
