[added] data struct points

--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -1,4 +1,4 @@
-# 红黑树的概念：
+## 红黑树的概念：
 1. 它是二叉排序树：
     + 若左子树不空，则左子树上所有节点的值均小于或等于它的根节点的值；
     + 若右子树不空，则右子树上所有节点的值均大于或等于它的根节点的值；
@@ -12,14 +12,14 @@
 
 ---
 
-# hashtable 中解决冲突的方法？
+## hashtable 中解决冲突的方法？
 + 线性探测法：使用 hash 函数计算出的位置如果已经被占用了，则向后依次寻找，找到表尾则回表头，直到寻找到一个空位；
 + 开链法：每个表格维护一个 list， 如果hash 函数计算出的格子相同，就按顺序方法放到 list 中；
 + 再散列：发生冲突时使用另一种 hash 函数再计算一个地址出来，直至不冲突为止；
 + 二次探测：发生冲突后按照 步长的平方数距离依次寻找空位；
 + 公共溢出区：发生冲突后把数据放到该区中；
 
-# 在不使用额外空间的情况下，交换两个数，你有几种方法？
+## 在不使用额外空间的情况下，交换两个数，你有几种方法？
 1. 算术法：
 ```
 x = x + y
@@ -34,33 +34,116 @@ y = x ^ yubuntu
 x = x ^ y
 ```
 
-# 单例模式
+## 编写 string 类
 
-# 简单工厂模式
+## 链表反转
 
-# 编写 string 类
+## 快速排序
 
-# 链表反转
+## 归并排序
 
-# 快速排序
+## 堆排序
 
-# 归并排序
+## 搜索二叉搜索树的的增删改查
 
-# 堆排序
+## 层次遍历
 
-# 搜索二叉搜索树的的增删改查
+## 先序遍历（递归、迭代）
 
-# 层次遍历
+## 中序遍历（递归、迭代）
 
-# 先序遍历（递归、迭代）
+## 后序遍历（递归、迭代）
 
-# 中序遍历（递归、迭代）
+## 先序、中序建树
 
-# 后序遍历（递归、迭代）
+## 中序、后序建树
 
-# 先序、中序建树
+## AVL建树
 
-# 中序、后序建树
 
-# AVL建树
+# 数据结构
+## 图的常用算法
++ 深度优先遍历
++ 宽度优先遍历
++ 最短路径 Floyed 算法
++ 最短路径 Dijkstra 算法
++ 最小生成树 prime 算法
++ 最小生成树 Kuraul 算法；
+
+## huffman （哈夫曼）编码、构建 huffman 树
+
+## AVL 树、B+树、红黑树、B 树 B+树区别，B+树应用在哪
+
+## 单链表如何判断有环
+
+## 如何判断一个图是否联通
+
+## hash 用在什么地方，解决 hash 冲突几种方法？负载因子是什么？
+
+## n 个节点的二叉树的所有不同构的个数
+
+## 二叉树的公共祖先，排序二叉树的公共祖先
+
+## 节点最大距离
+
+## 把一个二叉树原地变成一个双向链表
+
+## 二叉树的所有路径
+
+## 二叉树中寻找每一层中最大值
+
+## 最大深度，最小深度，是否是平衡树
+
+## 二叉树中叶子节点个数
+
+## 交换左右孩子、二叉树镜像
+
+## 两个二叉树是否相等
+
+## 是否为完全二叉树
+
+## 是否为对称二叉树
+
+## 判断 B 是否是 A 的子树
+
+## 单链表反转，删除指定的链表的一个节点
+
+## 实现一个循环队列
+
+## TopK 问题
+
+## 求一个树的最大距离
+
+## KMP 算法
+
+## 逆序对思路
+
+## 海量数据的 bitmap 使用原理
++ BitMap 解决海量数据寻找丢失、判断个别元素是否在海量数据当中的问题；
++ 40 个亿 int 占 （40*10^9 * 4 / 1024(KB)/1024(MB)/1024()GB） 约 14.9G，很显然内存放不下这么大的数据。但是用位图为表示即，用一位来表示一个int值需要 40亿/8/1024/1024 约为 476.83MB
+
+---
+
+# 算法
+
+## 最长公共子序列（动态规划）
+
+## 分治与递归（归并算法的两种实现）
+
+## 背包问题（贪心算法）
+
+## BFS、DFS、Dijkstra、floyd 
+
+## 回文字符串（动态规划）
+
+## 字符串匹配（KMP 算法）
+
+## 求一个数开根号（二分）
+
+## 万个数找到第20个大的数（堆排序）
+
+## 字符串最长不重复字串
+
+## 求 1-n 的子集
+    + 123，有 1，2，3，12，13，23，123
 
