[add] complete the more infomation

--- a/项目书籍/工作项目/第一份工作项目.md
+++ b/项目书籍/工作项目/第一份工作项目.md
@@ -24,3 +24,7 @@
 # 防疫机器人
 1. 介绍：使用机器人身上的红外和可见光拍照后，用算法组提供的接口获取到人脸位置区域信息，将获取的数据和照片等信息通过websocket传递到前端，在网页上实时显示人脸区域最高温度，同时将对应的数据存储到数据库中。
 2. websocket：http格式，http通信建立后双方进行一次参数带有websocket字段的通信，确定websokcet通信协议。
+
+# 涉及到知识点：
+1. 线程的创建使用销毁过程，线程池的使用；
+2. 进程间通信机制和原理（线程间）
