--- a/C++基础知识点/动态绑定和静态绑定.md
+++ b/C++基础知识点/动态绑定和静态绑定.md
@@ -1,4 +1,6 @@
 # 动态绑定和静态绑定
++ 多态的实现
+[](http://c.biancheng.net/view/267.html)
 
 # 引用能否实现动态绑定，为什么可以实现
 + 可以，引用在创建的时候必须要初始化，在访问虚函数时，编译器会根据所绑定的对象类型决定要调用哪个函数。主要只能调用虚函数
