--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -1,8 +1,8 @@
 ## 进程、线程、协程的区别和联系？
-1. 调度：线程是调度的基本单位（PC、状态码、通用寄存器、线程栈以及栈指针）；进程是拥有资源的基本单位（打开文件、堆、静态区、代码段）
+1. 调度：线程是调度的基本单位（程序计数器、状态码、通用寄存器、线程栈以及栈指针）；进程是拥有资源的基本单位（打开文件、堆、静态区、代码段）
 2. 并发性：一个进程内多个线程可以并发；多个进程可以实现并发；
 3. 拥有资源：线程不拥有系统资源，但一个进程的多个线程可以共享隶属于进程的资源；
-4. 系统开销：线程先创建销毁只需要处理 PC 值，状态码，通用寄存器，线程栈，以及栈指针；进程创建销毁都需要重新分配以及销毁 tash_struct 结构；
+4. 系统开销：线程创建销毁只需要处理 PC 值，状态码，通用寄存器，线程栈，以及栈指针；进程创建销毁都需要重新分配以及销毁 tash_struct 结构；
 
 + 进程是资源分配的基本单元，运行一个可执行程序创建一个或多个进程，进程就是运行起来的可执行程序；
 + 而线程是程序执行的基本单位，是轻量级的进程。每个进程都有一个唯一的主线程，而且是只能有一个，主线程和进程是相互依存的关系，主线程结束线程也会结束；一个进程下的所有线程共享堆、全局变量、静态变量、指针、引用、文件等。而独自占有栈。
@@ -71,3 +71,8 @@
 ## 一个进程能创建多少线程，和什么有关？
 
 ## 多进程的创建步骤：
+
+
+## 进程空间：
+    + 一个进程地址中会有一个栈空间、堆空间、Data空间存放已经初始化的全局变量和静态变量、BSS存放未初始化的变量、代码区；
+    + 进程运行时，会根据运行的顺序将对应的代码从进程的虚拟地址加载到物理地址中执行；
