--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -130,6 +130,15 @@
 
 ---
 
+# HTTP1.0 和 1.1 有什么区别？
+1. 长连接；短链接每次请求都需要建立新的 TCP 连接，连接不能复用；长链接是持久连接和请求的流水线处理；
+2. host字段：支持一台物理主机有多个虚拟机，共享一个IP地址的设置；
+3. 缓存处理：
+4. 带宽优化和网络链接使用：
+5. 新增一些错误通知状态码：
+
+---
+
 # HTTP长连接和短连接的区别
 + 短连接：客户端和服务器每进行一次 HTTP 操作，就建立一次连接，任务结束就中断连接,http/1.0 默认使用；
 + 长连接：保持连接性，http/1.1 默认使用；
@@ -144,7 +153,7 @@
 + 方法具体介绍：
     - GET：请求指定的页面信息，并返回实体主体；
     - HEAD：类似于 GET 请求，只不过返回响应中没有具体内容，用于获取报头；
-    - POST：向指定资源提交数据进行处理请求。数据倍包含在请求体中，POST 请求可能会导致新的资源的建立或已有的资源的修改；
+    - POST：向指定资源提交数据进行处理请求。数据被包含在请求体中，POST 请求可能会导致新的资源的建立或已有的资源的修改；
     - PUT：从客户端向服务器传送的数据取代指定的文档的内容；
     - DELETE：请求服务器删除指定的页面；
     - CONNECT：HTTP/1.1 协议中预留给能够将连接改为管道方式的代理服务器；
@@ -183,6 +192,18 @@
 **补充：** 这里的幂等性指的是一个和多次请求某一个资源应该具有同样的副作用，简单了来说意味着对同一 URL 的多个请求应该同样的结果；
 
 **总结：** 正因为它们有这样的区别，所以不该且不能用 get 请求做数据的增删改这样有副作用的操作，因为 get 的请求是幂等的，在网络不好的隧道中会重新尝试，如果用 get 请求增数据，会有重复操作的风险，而这样的重复操作可能会导致副作用。
+
+---
+
+# GET、POST、PUT、DELETE、OPTIONS
++ GET：用于检索查询数据，请求指定的信息，服务器根据参数返回指定的实体，该服务不会对服务器的数据进行修改；
++ HEAD：类似于 get，区别在于它只请求页面的头部消息，用于获取报头信息，返回的响应中没有内容。一般用于判断类型，根据返回状态码判断资源是否存在，资源是否更新过和更新时间；
++ POST：post一般用于向服务器提交数据进行处理，该方式常用于数据的提交等新增操作，数据被包含在 body 中；
++ PUT：该请求用于对服务器资源进行修改，从客户端向服务端传送数据取代指定的文档的内容，该请求侧重于内容的更新；
++ OPTIONS：用于客户端查询服务器的某些性能，比如发送请i去查看服务器是否接收某个请求，如果服务器运行，客户端才会去发 GET、POST、PUT、DELETE 等请求；
++ DELETE：请求服务器删除指定的页面；
++ TRACE：回显服务器收到的请求，主要用于测试或诊断；
++ PATCH：对PUT方法的补充，用于对已知资源进行局部更新；
 
 ---
 
