[modify] reorganize files of interview

--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -23,6 +23,15 @@
 3. 信号量：
 4. 管程：
 
+### 进程通信的方式
+1. 匿名管道（具有血缘关系的父子进程）
+2. 管道
+3. 信号
+4. 信号量
+5. 消息队列
+6. 共享内存
+7. 套接字
+
 ---
 
 ## 堆和栈的区别？
@@ -39,17 +48,7 @@
 
 ---
 
-## Linux 下进程间通信方式？
-+ 管道、无名管道；
-+ 共享内存；
-+ 消息队列；
-+ 套接字；
-+ 信号；
-+ 信号量；
-
----
-
-## 介绍几种典型的锁？
+## 介绍几种典型的锁（线程之间互斥）？
 + 读写锁
     - 多个读者可以同时进行读；
     - 写者必须互斥（只允许一个写者写，也不能读者写者同时进行）；
@@ -71,7 +70,6 @@
 ## 一个进程能创建多少线程，和什么有关？
 
 ## 多进程的创建步骤：
-
 
 ## 进程空间：
     + 一个进程地址中会有一个栈空间、堆空间、Data空间存放已经初始化的全局变量和静态变量、BSS存放未初始化的变量、代码区；
