--- a/计算机网络面试版.md
+++ b/计算机网络面试版.md
@@ -1,8 +1,16 @@
 # IOS七层模型是什么？各自的功能是什么？
 
-# TCP三次握手过程
+# TCP链接过程
++ 三次握手
++ 四次挥手
++ 为什么挥手会比握手多一次
++ 为什么一定要进行三次握手
 
 # 什么是TCP粘包/拆包，发生的原因？
+
+# TCP 是如何保证可靠性的
+
+# TCP 流量控制和拥塞控制
 
 # 一个TCP连接可以对应几个HTTP请求？
 
